--- a/Excalidraw/Drawing 2025-11-02 14.53.43.excalidraw.md
+++ b/Excalidraw/Drawing 2025-11-02 14.53.43.excalidraw.md
@@ -11,45 +11,79 @@ tags: [excalidraw]
 
 ## Text Elements
 ## Embedded Files
-4c5a5e8e84d547d3719654b2003c9eed8dc5656b: $$L$$
+917ed93992aea117d03010c0fdf7adf679ed0606: $$O$$
 
-3442b3d6742c19f1d2e0f7894383362b6999183e: $$I_1 \omega_1 \vec{e}_1$$
+37e99d2c817eb2dbb66be69671fd739cc1ff19e0: $$O'$$
 
-73255c4e45cb70aa8e64515fd533a44312826b71: $$I_2(\omega_2 \vec{e}_2+\omega_3 \vec{e}_3)$$
+23b4961cecc8206f40e95299731976050fa43976: $$\vec{r}_{\text{com}}$$
+
+7bf5f42b466c4d76df371d0197108b7b1483e08b: $$\vec{r}'_{\text{com}}$$
+
+c845889ce3c9b1f2c46f07eaeeb033c87f205da1: $$\vec{d}$$
 
 %%
 ## Drawing
 ```compressed-json
-N4KAkARALgngDgUwgLgAQQQDwMYEMA2AlgCYBOuA7hADTgQBuCpAzoQPYB2KqATLZMzYBXUtiRoIACyhQ4zZAHoFAc0JRJQgEYA6bGwC2CgF7N6hbEcK4OCtptbErHALRY8RMpWdx8Q1TdIEfARcZgRmBShcZQUebQBGADYEmjoghH0EDihmbgBtcDBQMBKIEm4IAA5MACtJACkAVjsAFUT6gDMACQBRF2wAVS6ANVxUkshYRArcUlI2Kn5SzG5n
+N4KAkARALgngDgUwgLgAQQQDwMYEMA2AlgCYBOuA7hADTgQBuCpAzoQPYB2KqATLZMzYBXUtiRoIACyhQ4zZAHoFAc0JRJQgEYA6bGwC2CgF7N6hbEcK4OCtptbErHALRY8RMpWdx8Q1TdIEfARcZgRmBShcZQUebQBGADYEmjoghH0EDihmbgBtcDBQMBKIEm4IIQAVAEdmZ0JNAGYjACtcACl4gFUAUWIoAEkADgAFAAZUkshYRArcUlI2Kn5S
 
-HgAWbR4eRIB2HcaAZniATkqN7aXIGG5D3a31xsr1092Ts4AGdd2riAoSdTcD5bRKHSqVRrrT7rRKVXaNX6SBCEZTSbhJSraXa7F6HE7rL48E6wyq/azKYJA37MKDzADWCAAwmx8GxSBUAMTxBDc7njUqaXDYOnKeZCDjEZms9kSWnWZhwWZZKD8yAdQj4fAAZVglIkgg8qogNPpCAA6gDJNw+IUBLS2AydTA9egDeVfmLURxwrk0PFfmxFdg1Dc/
+zG5neKa4gBYmgE5h/YBWJPj9+PHhgHZVyBgN6/3tHZvxxOvj/evh0+Hhu4QCgkdTcHiJY4JHivY5NH6XYaJAGFSCSBCEZTSbjxbQ8BFNA7DHjDHbxS77QHWZTBbjjQHMKBLADWCAAwmx8GxSBUAMQ8ABm+wQOx2U1Kmlw2CZyiWQg4xHZnO5EkZ1mYcAWWSgYsg/MI+HwAGVYDSJIIPDqIAzmQgAOogyRg+mMtgs40wU3oc3lQGyzEccK5NDxQFs
 
-R8Pr9RcI4ABJYi+1B5AC6vw65Eyce4HCEmt+hAlWBmHyNYol3uYCeKE2g8HEvFtAF9qQgEMR0Yl1jxGh9KvEXr9GCx2Fw0IkbdXB6xOAA5ThidF977xL7xQ555gAEXSUFb3A6BDCv00wglPWCmWyCezudtECEcGIuB3bb9uzHH0SHfWhzBP1vRA4OksxzfBflZYVdzQfd8EPW84DYfMcnyW0wAKCYSgjFCwA+FCUxQtD0OBHYwQhKFKi+WF4SuEp
+DXYNQPYPjOkoiAy4RwQbEIOoPIAXUB/PImWT3A4QgNgMI8qw82ultl8oDzFTxWm0Hg4l4KIAvvSEAhiGDTgcmkiQ3HGCx2Fw0HDAcPWJwAHKcMTcUnxa7EnjjClxwjMAAi6SgXe4/IIYUBmmE8t6wUy2VTBaLcaEcGIuH33eD10S2ySXx4X0SgKIDgmXzQt8AAtgpQPNAj3wE84zgNgSxyfIUTAApphKWMMLAcZUMzVD0Iw8FIXiaFfjhYYESRO4
 
-nAxLEcVXfFCWJcFcNtPDq3wUIoGZfR9DUZ8AAUEOyYCb2rGlZigAAhfNHA4ZQxNA28smIWSJXzRS0GvZSJKiUgoAAQTmBYkVwF9UB035VOM+YKDMiyIFmOyjSCY8KEg1BoLCQom0KKtIHKCQAGl8CMCgAHEugAGRuX4pjrMp9GiJBfhWNBnEqE5tEOD53hOeEnkaE47gRW9Q1QZw3yxJJ4kqRJGh4Q5vyo29/mIQE0G/bRw2/Akjnq+J4l2UlbyR
+ShxPErgJQ5iSXdc8JRfCG3wUIoHZfR9DUV9RkQ7IQPvBsGQWKAACES0cDhlFEsC4yyYgZPlEsFLQO8lPEqJSCgABBRZljRXA31QbTARUoylgoUzzIgBZbMtIIzwoKDUBgsJCnbQp60gcoJBnbdtyMYZlGIDh+SqIxEmIGoACVSGUAB9ZgYAAeUtWZm0c4yVjjdY0E2S5tCaZcER2CEdmucZrluOMo1QZwqu0CFP37C5Eiq44IUBYEBkdcdtBOa54
 
-FE0TQHZtDHYbmsSU4+w/LsyQUl1ML000pTZTlwz24sjyFEVS0lFkdtlcgOAVJVRNTDVtV1RLJCFDRAiNE0HXNS10Wpe1HUeio3TbD1hC9H0ftvQMhRDdFwxB8ViHLK8QObTz8W2cdSknYduEaP8JyYKcOFnDh5z9Xs8ShQ4Vtve9H2fdE3x4D8O0aPG4XXLdggZqCDwQSMxVjeN8g4gUT2IM8MmVBNkzA/MgO0lH/zYCCLO8/nbzTXAMwsqzNY1B
+mOK4P1JHrEUBNEMSxNBoR2F5SJFfYYxuHg1x2Sl5M9LDSmtV02Q5LleQFIURUtCUpQTOUFTO5V0FVDh1U1ESs31I0TVy71u2dG17UGp042Ot1foqf7K2Ef1A2xUNw0jbEY0Be6kxTfIONKbNcFzczLM3UsivQXBhhhh6azrVDGzmJa2w7DyyVhHYLkOY5JyYacx1Qb5OZHWd52bYZyq/Sbix3PcPK8hBT3PYhLwyLVb1AwFH2fV9sQ/L8ISOaqAJ
 
-BMwkdZsEaXBGgQSpLfWYhIV2Yg7lOBr1k0ZmPkObAThbYhKmIU2GsSTR3vcOsCJKf0UPidi8wLdL0FweIIF8pYArKRz6C6AB5fRBLgABFQ5oo3ABNPPMGIPPGkkRojF2eojQSmYTMWW847WQ4EmJYbnkOMc3iJfHSgq5rtBOVddkW7ENkSPL1l+drOtQYkZqyzsdg+HEeDq0bq3G1EVTQPHtBeR5eyJcEeDPsrq3Jdbfq2s6ZXQLkeVfo1BWFKME
+LYCtNVuNOUg8yZcBBCkNTQiSjtzCaJwvCaIdsBnCaEbjjGiabm6+IZv/VD3eW1blo2ybtvGHY2OmbHIC4hleP4mQuyEpDFOdSS1LkzSLJNhsVJzjTM7BvTDPy+zS8L+UbJMkIHKc5YXPwNzpePBAfNWfyygcgzJAoGp8B2IwdgACQAWQATX5TRlCnsfWUSOBzmypt5nyy0SZa5Idmj1d4mGfemh2DnGo2AOVtI2qRaSa4RXGJJ+odMEeGebYqsud
 
-e2p/oEu67Ai3X1pqJ0LpjQsndLeD6DILQdStFNe+n1QGJSBiWUGkgkYQ2rFDYMsBYYbVKF/IWMtRZqnTIbXWStqxyULBIXAPA0EI0wWgAKkxazWkbKjCy8QuxdmeI1a+WNCY4zQJUNct5sYzjnHWJI6xexHG7IPQKm5tyeXVkecWksLxIUVuJUodMnyeWGu+T8MIdj1TloBJSYEVYMjVnzX48FEIy3wlhAhEwcLoVIahLCy9YTo3Xpvbe1EwDOCP
+4iUf345vRTE2pgwvEoqSAkrNPxrnqsiBsVIDqAxOoqc6EgeTnDGtgHgN1JTSirI9JUFRXrvUCJ9OMeoDTuk9FaDkPoy5AxfktBBEMPR/WoQDOMfpJBUwRnGMMkpkbRkOpAdGyZbbxwgLjfG1dSiyTLBIXA+wKbVnhmgfyMx1702mL5cSnZzKX2/gHX8/NubcEokY0cc4OALmDKSCa0JEiGM3JLYImtoIdzlg9RW15kLGzEqUdWL4mbazxBCJ4TRH
 
-ifJ4PCzjnCvmxCYpCIBcRpLxfiMhWzCUQtYqB+kZJyU0lk6sql1LyS0pZKhpRJIGVsqZEIlC9GQBss3ByTcXLWXwO5NRfNk7+VvEFdA8RGQbjgD0YyXQTgAFkAAahxDIfGkjUHgzgegIQbuwuhzcjRxwnlsbsRI7jHH8Y8X4FU1j3DhEND448Sr4iOPPb6aAx5Yl7mCMeM94iNDHIIyAe9JqoGXMCVcBJ0Zgkvjwr5Tk1p1nccaP6TJH6cl5G/Q6
+4GyAlIhOEEWQWzcfBYS3i0wEWDoIzCLsUnYW2u/OxX8kRrkPmfbCOJXgBy2CffYkC6o/FjiUMRiceIGBToJRJUSrTl2LvJNpRdZIlx8TpI65c652Qbt02uldRlyM3lZVuyx26wU7iULRRRNwOSEFASwowABazh9C1WODAVowwUr0FZAADXGFsqSa86ak2mYVDYv5cTHBeccI+rwwmH22oCJqmwwllRjB+Mkbxxg8AnHGAaoJgFInXNsE+3txgTXK
 
-n8To/wqHKK6ipAEqjuiAgG+oIHA2yaaWBi9MZ2lNMgwGhLGFgwrFg0oOCYZhmhUQuMJDUzkKNmU+pZRY4zHWIwss4MWEoRrNMKanCoHe24B2YaeUPjFQHMIzg3AzjKqHFI0mdYCq7GWrlJRZQVHc06TBDW1ZjwIy0dLAp+iHyGO4UzFmcjCriM4vLW1kBwJ2L3A4uCIkdGJlcehbCITPHxOomHGijzdjPKykkS5HyaYhtouGBIzVZ5NRiWCuJJQE
+oOBs81AHYn+NoI4nxfyfFqvY3acY4HNkEe0m0SDnoQFQd8eIGCsF3VwRSgh5A3oamIdqL65DIZmlYZacGdp6G8EYQgChLCLS+lhpw5RqAUWlF4RGWAKNSXCMxmgDMWYcwIDzP04sxN5gGUUZFaVqjabNh4AzMGOjuDHB2Dwe+HxEgbgbFOUc3B6pmMFpY4Wb8CRbAuBLXczj5lwQbGeDxV5lZtP8S4mVQTvwiztUHTihs2lm1iYeeJDZrY3hQhhN
 
-lJJ4gYVJQkA2ephVJYp+TdG6VKEUvJCky2VKMk02pZbGl2Waes1pKl2kLFNT5EofkSipz6caBAjRpLEEwPgAASqsiV6BCDJWUKlVutxMTvMSCcRopxmKUXBcPHqiqFqNWaqVO5cDuBvCxBvPufYnh7ESIiZE+9rSYjxusb8TVY0UThOC2+ULEEMjRRIDk+1wzvyOl/CUIH0AYoAcqI06o8XOiei9EQq7NqfVJfAv5QGEBUoJYaeGdKEwR2wUGZlf
+2aTnYYXjmhYOmw2pH32HC0++zxjIqdpsTF2Lji4oRQS2pYB6ncWTgJNOrSdVl2zr0rp/aa6qSHXnQmulJLDKriO0o1kJlmQ3s5GZbc4kLK7n5VZFR9DdCkqQAAMilW0FBWQAHFNA1CEGwHYMAtmEAPQgNgNzcpBCIHIJAgISYfm0CuWq401xvxFE0H5jyT7aBeYm2ExIIT7Cqs/EGwYyRYuXDcX4SQPhbX/gtIBqB7G/smnBmxVxIN7WpCS4VTKU
 
-y4a3hOswnlNaBAytEWPEaGqiZqqfRIlVxNpGMwKmI4qE9fgGJ5n8p1n4Z4EjuJzVR9izUC2jOykWGirXnhtWgWW/4PXVpsarX1CnNZcrqYxiAyGKEVGap2TQhxiB7E7NgU4HR4jEB4AgD4HQRr4jBD+Mcmgt3vDqocTDFSQ7IXQuRiYUcI29P5XQxoSdB0p16Y5A02AWgADFsAAEd52JSXSlTZ3BOzH2XBCeRnYWKtWrCc/5CQjjj2Znq44ybSgL
+HxAQDRmj9KcHyyoy9FlRCtSWjIT9ZhUNeXCuBlCoVtCTqip4+K9hkquHBkRnwxVAi0aygxqIjVeMtUEwLtIvVcjrkSspsammOUwQWu0R5CpcGHVOtKC6zgYIDgeo4BYqxvAfhhNhIkWVAUnEIBjZbOMYaLwRpzXOyA0bAmQO/I6x1fBTYpqCxANNwbFlgGWT3QKXpVD7BgJoGAZ6tn7AANIzjOQlXobBa37H5NuF9FRsw6PIAVBsJMtjjCxT8I4E
 
-1w6cTY3Z3Z3C3icLNbrSg/IPqgXKM0iQFW/A1Jq35zirQpIB4ln1YMQDA+ByDKLxYrfg1ixDuKHqoYqM9bAr0QsUuw/cvDS3/qHaI5A6snoMEiquxR6GeCWXw2FfS3T0rPIgqVdxzVI4l7gskbx7VsNuxHB4NiSLkBRNGIk6Y9GcOjVcwQGJ9Rt42XC00wky1p51OXhU9pqxP3OK2P7ea0oWsdZlvM9yiAsauyNGwOsBAjxsCaD1bgXAVtWbvI6L
+1v5H3cxAX5O0sVwdOHib2JJzhRYbJCoavAXjNveLWkklbQUXCKaUNFi1UArUdZVJoIsBvQbI/AoTLJmNUro7Rz9vnsH3XlEdwhbL2Ocq45Q6GfHBWjcGTaETPKxMNg4ZJmV0mFVNS/vJxMIisbKckbFmRJNHK9ENb9ydR0rVLTJPY3q/W7PcCaEtyAVn7NCzdR8daXwA1S3XSG8U8tPGRtiyF3RcbEhudhCSCJRt86+OiebDNCyraJNtpkjCBbcJ
 
-bH8uBP0tfOIHCewcCCh0jtRaLeaY7EFofHRIiWwANnABxJycA4A6kMdwKs0AkSZAqEQV9SwGCEAQBQaSUHUXwtAx0Z3Lv+QQGwCIbFMYdz6B1A/aUCLX58ktx7uYypvcZDt5t7+ju4P/120A0ooevc+4y/dQjroaUh89+Hn3fuLuXoQYUd3OfsgR997CjP4DiPF+T7njIM70H0ciyXsPZefeZ0o+96jBDW8p4yBlzgUAMvaw1BVQRff6/6EH9kLU
+FtdsHOihwxoB32FHSpG0GrFKm3sCBYKpd1RPk0DJebRdewDkSD81xwEfmosHOIb9DgnA+L+Nzt8Y7C/59ME3+xDgM7/Xvb+J8nZxBXIkUFHUXlHxg+r23muslTbXN7rbrMwlv3Gh7kaiIaqvBOCcZtZJrga+mG7XY03w9zaj4tp2nsvmflRwSMJ5UbXp/tsb0PM2I/zej9jkont+zNv9ztMvxxK8lpD6fMPs3I8LZj8HT2Q34UvPOAcG1+wu+Z7K
 
-hAjB1mZtntvUBy8tCwEZc3wPEkIA6Di2vpfV955ydU+yrbyeQDr+3jIfRiCn87fHDZy/+/6FPy0NZ6ATpu6v0fgf5DG8uh6yhbzCaiTLWhjhbC9wvDEjYixqfqW7MDYAgH4DFy3Bbo9TMwlRQ4QglTVaQBGBsAGCG4SIEBCAyLdJJ6H7l6N5MLPYQBf6W6igkBz4L7Wi95MHEA6gIBwC4yMGkAkDjJsDK59C4CaDBDyawSEL8GnQB6irVjSQsiOS
+jVbalwySXGm43sAnsIv69Im5tcJG7Uz+r7Cm1vVD4ihFv8EDw+sV4kRGSeb5xlw27jiL+XRJvgHFJJWz4bzV8rXeOcDav4oKBwY0aeQeGeWu3s3u3UPuY0fsRITsV8Nwku18eIFwiI++8u5U20Q2iap8lSrMCBZU5wiK204IX+Ly0+YBVe2EzWju64DOTOvef4P+EGwKdqMYoKPswwGBAubUb864YC2wK4lEsIhBxe5ulaa4RwABPB0wzWcIO+X4
 
-kDKCCgAAUW8PwvAw01AWhmhwIjQAAlEaDOggMoDmLMBUMoWoU1BGLwLlDoTYTofoUYRQZfofvngyJ3lAMOMjHomZv/qpEwFWqgKnFkKIeIdwLSGQb8NgEQDwWgFEdTpABwNrHWIkQGEIFAABGkaQNEbeMlKQAyKQNOKkZEbkUkRAAUUUSIWIZ5Ika4RAHYDUAgNgDkFqCkXAIIcISkbURIdTk5K0YQIwC0IQfgMQdWI3PqOkIMaqjEUIDSAYO/gu
+40o0HwFm0w62FwVwew22pE0GshmEuI+yoSzuG0Fwr26hEGjuH4yujuqO40+hOEuI4eG0HwMYza3s4ISaGEV8H4ZucIvUH+JwDhzW4IZW7wtUJBHhDOBeWKXwiKHhpwPU0cgeT+duBhoRBw4RbhuKnhMRNijueItqCa98lawRThYRrhkRXuXh0wns0c+uPUjqlaMIcGZRGRLhER7h1RseuuvsdU/RJRneVB3evB7RWRVRuR1eBK3sWOp8bmRRv4bR
 
-kAaUN6lTpygYFqNMd4aqrzIZpxNxIZIMcMaMUpL5OAEOmZgbJWJrg2EAA===
+zh4xXRkxPezEpEh8RIBwqGoBqRweoxyxlRqx0R1epB64lwTwMGcG0cSxFRnRORpxIej80IpEvqxeeu5qwx+a5RmRxxjxNRtEWKnB0cn4/wv4Io9idxfxDxURgJYAOIbyqOdqYK1aSQIo0JHR2RcJTsOIW2vqlEhw/Yk+Xx+x4BNBvxWJExTxGEOIh8s2/Y+u7B+ulSmJKxAJuJCQvU+KsIZSJIrWbJ/xOJWuBIuK+uYSR8taNUexdSz+hx9x2J3R
+
+EBv4W2lwrM0ppwDOgpsJSp8u7hqp0ccG9UmpiQ7aYicAgQtYIg4QYOYMhA+ghYASowlpzA1p3AjIQgsspsXaTSPaxA6cIkaqqEIRRxOpax0wiJKplEhpGpGG7Em6JQKWDkzAhoowGUFAmgZyQg9APArQCA9AM4AAih0DsNgMwPyB0FVlMiug8sVJcW1J8AzqRJbr1OuKBsVE8Fioni8q8CKHan/BCi9tsNoDGNsESKRIClNNhuikhtcJYVVFtjGN
+
+7s2icHthRgdqdPgigvsNgP2JoMcAxpdngsgixmqLdiQg2Jxh9l6LxhufxhNs1tjmSsJtyjeV9qUD9tKl1vKvwjKqjHGCqkpqQpqtqmzgMgFJpqTAAGJw56YYSmqGaaKMy6IAbOaqEY7BiOp2YObNh7wkgM4Lkk5Bpk5emhqU4BZJII7BZPgBJ05hbO79hgos6poxIJY842y5rkkC5OxC5knUFETDmjkHw771TdT1qp7zlglLkkFBFFrsQAQ+l8R+
+
+kBm4ZUXtKDrqTDpgVWTyidITrqYCBDKLpqbs4YDjK2Szp3I1mFyzLuQkUJkrINipYQC9BmCtA7CjCYDxD6DOAiz8jMDDCEACjxD7pVlWXNxfqPLyH/AdQBwsxkjwbnx1mnwvCVLDa9QM6gr/AIYCYGK/olGgp1T/DaFy7LYAKrbNojQBzRxbA7Q/AOKwL7Trm6TkpPS8gIC1pbDxCHmMptUqisbnkcqkLfTXlULvmGV0KIaoCPnCqjVPbiZ+BSq1
+
+jcINg/myZ/nKoKag5qpiISKqZtJQ7zBnqwXLUqL6bqIthIWWoeQQgByLmlU45cyurBjfJDhPWeqOYfxVRzFdZbiBpeZsW+bkVKyBbaUPg0UxrLj0W3VPA1FxYxZg2cSsUkXsWg0Oz5o8UOF5X1SsyFWtYlX1qVUXB7xgJ1VEhDFxzyXelJy+mpz+l9qI2DIaW5xjJjqaX6WmUST6QzqTKM2QALoWW815TWXzq2UJYOVJkVCPxNApRVCSDHDdBQBD
+
+wRTdBjwIBGB5Y7A1DdWAgGbVkRW1nNQIgjRrhl7jQOovLtnNREjPK1plZVTJ73w5UTZHxz5IhVT1Vb6vDTkVXPCbQW0RG/i9Rrm0iUZ9XoA8g7l7kHmngXa9VbmnmsofRDWXkjWvljU0ItUnT3m0gQazXp3zXfYSZfn/a/lA4AVbWqppi7UgUmXgVlCQWORjwnXUzwV62XVLLIUoxPAkiIpuYYWoCzRvUCx45erYjb4L59hEUA0o1A3hog2UUGWV
+
+AQ2hY6zu1PCkqASs5qXxaz1Zq86cX8VyGY3fHByu0nzu2YZ4jgje2lpfAjlXAB0xhB2mlyV8VxaKXNK9oZyxZc3STjqs16VtJ/081LqxYC31xgPhX1ai1rpc7eSd1bpOUOTHDEBGD0C9BCCYBbJhVlD6DRBnYNYbA2oP1PDfXbTaHF5W2bAQi/rkTDZuacFw3jY2Y+24YBwh1oCkr8pHY8gcEcE9VMbh3QADXJ0cZp3cYSCSCSgaCBB8ougsg51S
+
+YblzW3lF2LW/bflIzrXl3qNKKnV81WhI68yOqfAD3e7YX45LT0QQhfBqHL0ayr3BL1T1X2N/Wk7wOkWlCAW2lkXz1eJAXJqRKxa72ePg77WxZkIRPoAXDXBdiVoFG4AhCp7EB22XDYDjD8jED8jXBmT8iqFdgzaJB8ruDNgOzuYIlU1OWN24CDAQAS3boSCjCECYAICjAJRNC5C60XV4MENbwXxbZOEnzggkjW7ezUOOojmm2gKPx7yHDO3Yj2Mr
+
+bsNw3Eqh0bm8P8MxiCMPTXaiPsriNcqSPoDSPYCyOENvbZ2Cpdb8qqPjUQCfkGNaMyaA7/l6NGoGNqVhAeQ1QiwX7OrvU8wiyWNj1Ib9jrjriVpqwr10U6ytZwiEpOWebeaZreOV2BMU7+PU7V3MUhPI1hPAUqagVqVROgUQBwgICO7EA8DYCURxOaA8DECaCaAM6aAIAb7xBZMsnYDYCcv8jnAdUlMEBlOoQVPxBVMabECyKkyVkNPIMVDDBnIw
+
+DdCYCYBjzYC4P2l9ORVIa4imGLa2FpWrlJVG0bQQbrhfA1Sgook1QLPjiItlU4aLOcPTVh0J1UpbOTCx0MpCPus3ZiP3ajWnPnPyOTW5X53HMZ1sLqNwxPOl06NvMfnyzw5L3fPmQ9TB3D3GJoBD0Asj04VghlbdQJP/N+Iwtaz0UiybRuPIuA0Ng+M7XuL+YL0YsJwI0734uuLc6EsQ6GOksORgqaAQK0oIA8s/yJD8h7yUsrlv5oLLmZO4B7Df
+
+DFP0ilOH0Ik0Tivv2HVyJ5b1OIOJmNPoAGSJDMCZNVDHAwXdO3K9PKAXOQDbxXwJWUTQhAZjmnzUNrRVVHyE4FL/BD5jaCru5xjLNghdZrNcNusnketbM7NXbCP+sHOBvp3BtunPZTU3MKMioF1qNJsaMl08LaOvOkq4Ipuc3GPLj+pZvPWoAfgguOYii1QREPUOO0UVs6zDb64sfuPEUEv1vou+OYvNsBOCdtvBOGOhNdvk66i11tL9sVDXCaD8
+
+jHCTs8BDsM7YA7DEAfjZNwjxCpNoIIiaCKc65NAdXDCaBCuejlObsSsQVSvQ64AHr7tJbdxHsQBwAABqeWvQkg+wNQM4mr+Dd7/TxUvwv6KpK5eFiILHvyfqV+2wFwBIfsJwDrkALDwYMCjrM5vA4HTV6zWdh2wjfDsH3rjGuzCH+zd2w1RzlCqHcj6H4bKjOH9zjzqYzzAOSqOm+jKs5HN1lSWwA9za9HzY0C5U3wew0LjjsLwSiInBpbHm/1KL
+
+3b/HIOVd6qc9wn2LG3QT29S9knnkqLMnRLddnK0TEAtLp8/wO5CATQ2A+wmgnLNLVU/IdUIQnYmgtad3Nw/Ia4qDuAOtYMa7QZtJtn27NTE8LnrY4AHEjkcAcAxoAS3A9Y0AaImQFQRA6KqwDAhACAFAUkcdvr0HPI/IpPZPYoF3Ig7Kgw+4+gxorV7rkdu5iQ+5FP2AVPWoNPGQBPPrFXfrVXF5kA7PiwnPtPUFEjj2uHlPIv2QXPdPWHSj01ed
+
+hQ0v1PtP9PL5kbhdQvHPsvtPCUxdcbKvwvavGQGURHXXxvuvQwYvnAUAUFeM+oTUS2qvovGQUFdvhohARgZqh0rvevGQVQWAhkmPPMcWCA/IKdOvMvNvGQiP3NxlUi/vsf+gvQ5lkDjc9ypQJvbv+gwyVQPTuCbP1vcvUFmqBvnoCOVo2ASwBoZyYIRwXs2sbhSQNwk3KvzANfHI+AU8i4tUU2AB20cIY50c2PRgbABgyPQ4BAnp2II5NqH8Dlyf
+
+cvBvumBjDz8sFPMoJAXvPvhb2P2/xAxoCAcA1qB/pAJAE8bAUrafuAmgwQe9QiF/x5z0PcUkHIDkyUEoAAFHiLcLl//z/7UAlexwAAJSWgEoCAZQI6UpRf9cAv/MJMALBR0heAiAkAeAKX459sgGvFkObygCjheuAycROXxUhMA+kqAHuFkDv4P93SpAT0oCGwDvpaB9AuMBwBUzMCvGkAYQFAEAjNgPSnAiAPg1IAshSAM4dgWgH4GAghBIg2/v
+
+fw8j8Cl+dgPMtgByCGg2BcAK/jfzYFyDH+jkFQYQEYBVAJ++AKfg2HbpGNgg+g6zAwKEAMgDABfW5B205xScBB2YAwIaHSBWCeYPmTiNxAMj6DDBxgxSD5HABaJxE+oG0iomh6tggAA=
 ```
 %%
