--- a/基础物理/杨振宁/第八讲.md
+++ b/基础物理/杨振宁/第八讲.md
@@ -16,10 +16,14 @@ I hope I can convince him to come to become a faculty member of Tsinghua. His ex
 ### 简谐运动
 
 Okay, now we'll go to what we discussed last time. We were talking about the harmonic motion. If we have a spring, the block would oscillate. And the equation is mx double dot minus kx. We often times write it this way. X double dot equal to minus omega squared x omega squared is equal to K over F. And the solution of this is a cosine x. If you take the cosine omega x and differentiate it twice, you get omega squared with a minus sign. But the sine omega x is also a solution because the equation is linear. So a sum of the two is also a solution.（好了，现在我们来回顾上次讨论的内容。我们当时在讲简谐运动。如果我们有一个弹簧，物块就会振荡。方程为mx双点减kx。我们通常这样写：X双点等于负ω平方x，其中ω平方等于K除以F。这个方程的解是一个余弦函数x。如果你对cos(ωx)进行两次微分，会得到带负号的ω平方。但sin(ωx)也是解，因为方程是线性的。所以两者的和也是解。）
-
 $$m \ddot{x}=-kx$$
-通常写为：$\ddot{x}=-\omega^2x$，其中 $\omega^2=\frac{k}{m}$，方程的解为：$$x=A \cos(\omega t)$$
-$\cos(\omega t)$ 微分两次会产生 $-\omega^2$，同样 $B\sin(\omega t)$也是它的解，因为方程是线性的，所以其更一般的通解为 $$x=A\cos(\omega t)+B\sin(\omega t)=C \cos(\omega t+\delta)=D \sin(\omega t+\Delta)$$
+
+通常写为：$\ddot{x}=-\omega^2x$，其中 $\omega^2=\frac{k}{m}$，方程的解为：
+
+$$x=A \cos(\omega t)$$
+
+因为 $\cos(\omega t)$ 微分两次会产生 $-\omega^2$，同样 $B\sin(\omega t)$ 也是它的解，由于方程是线性的，所以其更一般的通解为 
+$$x=A\cos(\omega t)+B\sin(\omega t)=C \cos(\omega t+\delta)=D \sin(\omega t+\Delta)$$
  But you can also write this as c times cosine because cosine of a sum is equal to a cosine plus a sine. And of course, these are all equivalent forms and you can write as d sine. Such a motion is called harmonic. An important thing is that small oscillations are all approximately harmonic. Wait a minute. Because the force is not minus kx, we can try to expand the policies.（但你也可以将其写成c乘以余弦的形式，因为和的余弦等于余弦加正弦。当然，这些都是等价的形式，你也可以写成d乘以正弦。这种运动被称为简谐运动。*重要的是，小幅度的振动都近似于简谐运动*。等一下。如果力不是 -kx，我们可以尝试展开这些策略。）
 
 如果力不是 $-kx$，比如存在一些二次项、三次项等，当 $x$ 非常小时，二次项和三次项将远小于线性项。因此，它近似于谐波。
