--- a/基础物理/杨振宁/第十四讲.md
+++ b/基础物理/杨振宁/第十四讲.md
@@ -1,31 +1,36 @@
 
-We had talked about the gyroscope. If it has an angular momentum of L, this is the z-axis. It has an angle of theta.There were several, I said, where we had analyzed how it moves. The question was, it can precess around the z-axis. It's at the top which precesses around the z-axis.The motion which goes around this way is called nutation. Nutation means that it's not stable. It's not a smooth operation.It goes around that circle, like in the diagram that I showed you of Feynman, in Feynman's book. （我们之前讨论过陀螺仪。如果它具有角动量L，这是z轴。它与z轴有一个θ角。我说过，我们已经分析过几种情况下它是如何运动的。问题是，它可以绕z轴进动。它在顶部绕z轴进动。这种绕行的运动称为章动。章动意味着它不稳定。这不是一个平稳的运动。它绕着那个圆圈运动，就像我在费曼书中给你们看的费曼图所示。）
+We had talked about the gyroscope. If it has an angular momentum of L, this is the z-axis. It has an angle of theta.There were several, I said, where we had analyzed how it moves. The question was, it can precess around the z-axis. It's at the top which precesses around the z-axis.The motion which goes around this way is called nutation. Nutation means that it's not stable. It's not a smooth operation.It goes around that circle, like in the diagram that I showed you of Feynman, in Feynman's book. （我们之前讨论过陀螺仪。如果它具有角动量 $L$，这是 $z$ 轴。它与 $z$ 轴有一个 $θ$ 角。我说过，我们已经分析过几种情况下它是如何运动的。问题是，它可以绕 $z$ 轴进动。它在顶部绕 $z$ 轴进动。这种绕行的运动称为章动。章动意味着它不稳定。这不是一个平稳的运动。它绕着那个圆圈运动，就像我在费曼书中给你们看的费曼图所示。）
+
+Several students came to me and said that there is a motion which is smoothly just going around without the nutation. I didn't believe that, but I went back and went through a complicated analysis.They were right. It's possible to have that motion. And the final formula is like this.mg is the weight of this body. This rod is supposed to be weightless. The length of the rod is supposed to be L. Theta is this angle.Theta can be 90 degrees, but it can be bigger or smaller than 90 degrees. （几位学生来找我，说有一种运动方式可以让物体平稳旋转而不产生章动。起初我并不相信，但经过一番复杂的分析后，发现他们是对的——这种运动确实存在。最终的公式是这样的：$mg$ 代表物体的重量，假设这根杆子没有重量，杆长为 $l$，$θ$ 代表这个角度。$θ$ 可以是 90 度，也可以大于或小于 90 度。）
+
+$$\frac{mgl}{\Omega}=L-\Omega \cos \theta(ml^2+I_{2})$$
+
+Omega is the angular velocity around the z-axis, if it goes smoothly. I2, this top, this gyroscope has an I1, which is the main one.But it has three angular momenta. It has three principal axes of inertia. And one of them is I1, the other two are I2 and I3, which are supposed to be the same.Then it can have this formula. If cosine theta is zero, namely if theta is 90 degrees, this becomes exactly the formula that I had derived in class. But at that time, I thought that that's only an approximation.For theta equal to zero, I thought it's an approximation. （如果运转平稳，$\Omega$ 就是绕 $z$ 轴的角速度。$I_2$，这个陀螺，这个回转仪有一个 $I_1$，这是主要的。但它有三个角动量。它有三个主惯性轴。其中一个是I1，另外两个是 $I_2$ 和 $I_3$，它们应该是相同的。那么它就可以有这个公式。如果 $\cos θ$ 为零，也就是说如果 $θ$ 为 90 度，这就完全变成了我在课堂上推导出的公式。但当时我以为那只是一个近似值。对于 $θ$ 等于零的情况，我以为那是一个近似值。）
+
+Even for theta equal to zero, I thought it's an approximation. But after a careful analysis, it's not an approximation.For theta equal to zero, it was exact. Next, we discuss on a rigid body. If there is a complicated rigid body, it has a center of mass. Now every part of the body is attracted by gravity. This is the real situation. Every part of the body is subject to gravity, depending on the density. If there is a particularly heavy part of that body, then the gravity here is higher. （即便 $θ$ 等于零时，我也以为这是个近似值。但经过仔细分析后发现并非近似——当 $θ$ 为零时，结果是精确值。接下来我们讨论刚体问题。对于一个复杂刚体而言，它必然存在质心。此时物体每个部分都受到重力作用，这才是实际情况。根据密度差异，物体各部位承受的重力各不相同。若某部分质量特别集中，该处受到的重力就会更强。）
 
 
-Several students came to me and said that there is a motion which is smoothly just going around without the nutation. I didn't believe that, but I went back and went through a complicated analysis.They were right. It's possible to have that motion. And the final formula is like this.mg is the weight of this body. This rod is supposed to be weightless. The length of the rod is supposed to be L. Theta is this angle.Theta can be 90 degrees, but it can be bigger or smaller than 90 degrees. （几位学生来找我，说有一种运动方式可以让物体平稳旋转而不产生章动。起初我并不相信，但经过一番复杂的分析后，发现他们是对的——这种运动确实存在。最终的公式是这样的：mg代表物体的重量，假设这根杆子没有重量，杆长为L，θ代表这个角度。θ可以是90度，也可以大于或小于90度。）
+We now want to prove a theorem that the total effect of all these gravitational forces on different parts of the body is equivalent to one force acting only on one point, the center of mass, and with a magnitude proportional to the total mass of the body. So let me see a theorem.The total effect on a rigid body by gravity is equivalent to that of a single force with magnitude sum of mg on the center of mass. The total effect on a rigid body by gravity is equivalent to that of a single force with magnitude summation of m times g on the center of mass. This is true for a static situation or a dynamic situation. Static situation, if it's at rest. （我们现在要证明一个定理：所有这些重力对物体不同部分的总效应，等同于一个仅作用于一个点的单一力，这个点就是质心，其大小与物体的总质量成正比。让我来看一下这个定理。重力对刚体的总效应等同于一个作用于质心的单一力，其大小为 mg 的总和。重力对刚体的总效应等同于一个作用于质心的单一力，其大小为 mg 的总和。这个定理在静态或动态情况下都成立。静态情况指的是物体处于静止状态。）
 
+For a dynamic situation, if it's moving. For either case, these two cases are equivalent.And this requires a proof. We had proven that the motion of the center of mass, the acceleration of the center of mass, is equal to the total external force. We can write down the total external force as... The total external force consists of two kinds. Gravitational force and non-gravitational force. So I separate and write this. This is the gravitational force on the i-th particle.This is all the other forces on the i-th particle. （对于动态情况，如果物体在运动。无论哪种情况，这两种情形是等价的。这需要证明。我们已经证明过，质心的运动——即质心的加速度——等于合外力。我们可以将合外力表示为...合外力由两种力组成：引力和非引力。因此我将其分开书写。这是作用在第 $i$ 个粒子上的引力。这是作用在第 $i$ 个粒子上的所有其他力。）
 
-Omega is the angular velocity around the z-axis, if it goes smoothly. I2, this top, this gyroscope has an I1, which is the main one.But it has three angular momenta. It has three principal axes of inertia. And one of them is I1, the other two are I2 and I3, which are supposed to be the same.Then it can have this formula. If cosine theta is zero, namely if theta is 90 degrees, this becomes exactly the formula that I had derived in class. But at that time, I thought that that's only an approximation.For theta equal to zero, I thought it's an approximation. （如果运转平稳，Omega就是绕z轴的角速度。I2，这个陀螺，这个回转仪有一个I1，这是主要的。但它有三个角动量。它有三个主惯性轴。其中一个是I1，另外两个是I2和I3，它们应该是相同的。那么它就可以有这个公式。如果cosθ为零，也就是说如果θ为90度，这就完全变成了我在课堂上推导出的公式。但当时我以为那只是一个近似值。对于θ等于零的情况，我以为那是一个近似值。）
-
-
-Even for theta equal to zero, I thought it's an approximation. But after a careful analysis, it's not an approximation.For theta equal to zero, it was exact. Next, we discuss on a rigid body. If there is a complicated rigid body, it has a center of mass.Now every part of the body is attracted by gravity. This is the real situation. Every part of the body is subject to gravity, depending on the density.If there is a particularly heavy part of that body, then the gravity here is higher. （即便θ等于零时，我也以为这是个近似值。但经过仔细分析后发现并非近似——当θ为零时，结果是精确值。接下来我们讨论刚体问题。对于一个复杂刚体而言，它必然存在质心。此时物体每个部分都受到重力作用，这才是实际情况。根据密度差异，物体各部位承受的重力各不相同。若某部分质量特别集中，该处受到的重力就会更强。）
-
-
-We now want to prove a theorem that the total effect of all these gravitational forces on different parts of the body is equivalent to one force acting only on one point, the center of mass, and with a magnitude proportional to the total mass of the body. So let me see a theorem.The total effect on a rigid body by gravity is equivalent to that of a single force with magnitude sum of mg on the center of mass. The total effect on a rigid body by gravity is equivalent to that of a single force with magnitude summation of m times g on the center of mass. This is true for a static situation or a dynamic situation.Static situation, if it's at rest. （我们现在要证明一个定理：所有这些重力对身体不同部分的总效应，等同于一个仅作用于一个点的单一力，这个点就是质心，其大小与身体的总质量成正比。让我来看一下这个定理。重力对刚体的总效应等同于一个作用于质心的单一力，其大小为mg的总和。重力对刚体的总效应等同于一个作用于质心的单一力，其大小为m乘以g的总和。这个定理在静态或动态情况下都成立。静态情况指的是物体处于静止状态。）
-
-For a dynamic situation, if it's moving. For either case, these two cases are equivalent.And this requires a proof. We had proven that the motion of the center of mass, the acceleration of the center of mass, is equal to the total external force. We can write down the total external force as... The total external force consists of two kinds.Gravitational force and non-gravitational force. So I separate and write this. This is the gravitational force on the i-th particle.This is all the other forces on the i-th particle. （对于动态情况，如果物体在运动。无论哪种情况，这两种情形是等价的。这需要证明。我们已经证明过，质心的运动——即质心的加速度——等于合外力。我们可以将合外力表示为...合外力由两种力组成：引力和非引力。因此我将其分开书写。这是作用在第i个粒子上的引力。这是作用在第i个粒子上的所有其他力。）
-
+$$\left( \sum m \right) \ddot{r}_{\text{com}} = \sum F_{i\text{ tot}}=\sum \vec{F}_{i \text{ g}}+\sum \vec{F}_{i \text{ other}}$$
 
 So I separate the gravitational force from the non-gravitational force. And we also have the equation of d dt.What is in the bracket is the total angular momentum. The time derivative of the total angular momentum is equal to summation of r i cross F i external. And we now separate that into two parts.Summation of r i cross F i g plus summation of r i cross F i other. In other words, we separate the gravitational effect from the non-gravitational effect. These are the gravitational effect.What we now want to prove is that this gravitational effect is equivalent to the case where there is only one force acting on one point, the center of mass. （因此，我将引力与非引力分开处理。我们还有关于d/dt的方程。括号内表示的是总角动量。总角动量的时间导数等于所有外力矩的矢量和，即Σ(r_i × F_i^external)。现在我们将它分为两部分：Σ(r_i × F_i^g)加上Σ(r_i × F_i^other)。换句话说，我们将引力效应与非引力效应区分开来。这些就是引力效应。现在我们要证明的是，这种引力效应等效于仅有一个力作用在质心点上的情况。）
 
+$$\frac{\mathrm{d}}{\mathrm{d}t}\left( \sum m_{i} \vec{r}_{i} \times \vec{v}_{i} \right)=\sum (\vec{r}_{i} \times \vec{F}_{i \text{ ext}})=\sum (\vec{r}_{i} \times \vec{F}_{i \text{ g}})+\sum (\vec{r}_{i} \times\vec{F}_{i \text{ other}})$$
 
 But F i g, the gravitational force on the m-th particle, is equal to minus. Suppose k is the unit vector on the z-axis upwards.So it's m i g times k. The gravitational force on the i-th body is obviously equal to this. So summation of F i g is equal to minus summation of m d k. Which is equal to total force on center of gravity. So this part is the gravitation.We have proven for this part that the action on the whole body is equivalent to the action on the center of mass. How about this part? （但是，F i g，即第m个粒子上的重力，等于负值。假设k是z轴向上的单位向量。因此它是m i g乘以k。第i个物体上的重力显然等于这个。所以F i g的总和等于负的m d k的总和。这等于作用在重心上的总力。所以这部分是重力。我们已经证明，对于这部分，对整个物体的作用等同于对质心的作用。那么这部分呢？）
 
+$$\sum \vec{F}_{i \text{ g}}=-\left( \sum m_{i} \right)g \vec{k}=\text{重心上的总力}$$
+$$\vec{T}_{g} = \sum \vec{r}_{i} \times \vec{F}_{i \text{ g}}=-g \sum m_{i}(\vec{r}_{i} \times \vec{k})$$
+因为有：$\sum m_{i}\vec{r}_{i}=\left( \sum m_{i} \right) \vec{r}_{\text{com}}$，所以有：
+
+$$\vec{T}_{g}=-g\left( \sum m_{i} \right)\vec{r}_{\text{com}} \times \vec{k}=\text{torque on center of mass by one force}$$
 
 Summation F i g is equal to m g m k. So that is equal to r i. But summation of m i r i is equal to summation of m times r center of mass. This torque.This torque is equal to, let's write the torque. This is the torque due to gravity. It's equal to minus g summation of m r center of mass cross k. And that is equal to torque on center of mass by one force.So QED. Because we have proven that this term for the motion, dynamic or static, is equivalent to the action of one force. And this is also equal to the action of one force.（总和 F i g 等于 m g m k。所以等于 r i。但 m i r i 的总和等于 m 乘以质心 r 的总和。这个扭矩。这个扭矩等于，让我们写下扭矩。这是由重力引起的扭矩。它等于负 g 乘以 m r 质心与 k 的叉积。这等于一个力对质心的扭矩。证毕。因为我们证明了这一项对于运动，无论是动态还是静态，都等同于一个力的作用。这也等于一个力的作用。）
 
 So what's the conclusion? The conclusion is that when you talk about the gravitational force on a complicated rigid body, you can replace the total effect by just one force on the center of mass. As a matter of fact, that center of mass may not be a part of the body. You can think of a ring.The center of mass is here. It's not a part of the body. But the total gravitational effect on the spring is equivalent to a force of this.You can imagine that this is connected to it by a massless rigid rod. （那么结论是什么呢？结论就是，当你讨论一个复杂刚体上的重力时，可以用作用在质心上的一个力来代替整体效果。事实上，这个质心可能并不属于物体本身。比如一个圆环，它的质心就在这里，但质心并不属于圆环的一部分。然而，整个圆环所受的重力效应就相当于作用在这个质心上的力。你可以想象这是通过一根无质量的刚性杆连接到圆环上的。）
-
 
 However, what we have proven is dependent on the fact that every point is attracted by Earth, with a magnitude of m times g. And it's always the same g. If it's a big body, this is not correct. If this is Earth.If I think of daily life, that statement that every particle is attracted in a minus z direction with mg is correct. But if this is the Earth and you have a big body, like a mountain, then the force here and the force here are not even in the same direction. As a consequence, the theorem that we just had proven is true only for small bodies.As a matter of fact, I can easily construct a case where you have a collection of forces on a body.（然而，我们已经证明的结论依赖于这样一个事实：每个点都受到地球的吸引，大小为m乘以g，而且g始终相同。如果是一个大物体，这就并不正确。以地球为例。在日常生活中，认为每个粒子都受到mg大小的负z方向吸引力是正确的。但如果这是地球，而你有一个大物体，比如一座山，那么这里的力和那里的力甚至不在同一方向上。因此，我们刚刚证明的定理仅适用于小物体。事实上，我可以轻易构造一个例子，其中作用在物体上的力是一组力的集合。）
 
@@ -34,28 +39,25 @@ And that collection cannot be replaced by one force. What we have proven in the
 You can take the sum, but the torque would not be correct. So in general, a big body like this case, the total effect of the gravitational force on that big body, not only is not replaced by that formula, in general, it cannot be replaced by a single force.It has to be replaced by a more complicated... Can anybody tell me, if I say that okay, if I have a complicated collection of forces, I said it may not be replaceable by a single force. Could somebody tell me whether it can be replaced by somewhat more complicated arrangement? （你可以计算总和，但扭矩会不正确。所以一般来说，像这样的情况，一个大物体受到的重力的总效果，不仅不能用那个公式代替，通常也不能用一个单一的力来代替。它必须用一个更复杂的... 谁能告诉我，如果我说好吧，如果我有一个复杂的力的集合，我说它可能不能被一个单一的力代替。谁能告诉我它是否可以用某种更复杂的安排来代替？）
 
 
-It can be replaced by two things. A, the total force, you just add all the forces like what we have, but the components may not be parallel to each other.And B, plus a torque. A torque is just, you can think of two equal and opposite forces, this way and this way, that generates a torque. Theorem, any collection of forces acting on a rigid body, a complicated rigid body, can be replaced by one force on the center of mass, plus one torque.But we are not going to use this theorem, so I just state it. If you are interested, you can think about it. It's actually not difficult to prove.（它可以被两种东西替代。A，总力，你只需将所有力相加，就像我们之前所做的那样，但这些分力可能并不互相平行。还有B，加上一个扭矩。扭矩就是，你可以想象两个大小相等方向相反的力，一个朝这边，一个朝那边，这样就会产生一个扭矩。定理：作用于刚体（复杂的刚体）上的任何力系，都可以用一个作用于质心的力和一个扭矩来代替。但我们不会用到这个定理，所以我只是提一下。如果你感兴趣，可以思考一下。其实证明起来并不难。）
+It can be replaced by two things. A, the total force, you just add all the forces like what we have, but the components may not be parallel to each other.And B, plus a torque. A torque is just, you can think of two equal and opposite forces, this way and this way, that generates a torque. Theorem, any collection of forces acting on a rigid body, a complicated rigid body, can be replaced by one force on the center of mass, plus one torque. But we are not going to use this theorem, so I just state it. If you are interested, you can think about it. It's actually not difficult to prove.（它可以被两种东西替代。A，总力，你只需将所有力相加，就像我们之前所做的那样，但这些分力可能并不互相平行。还有B，加上一个扭矩。扭矩就是，你可以想象两个大小相等方向相反的力，一个朝这边，一个朝那边，这样就会产生一个扭矩。定理：作用于刚体（复杂的刚体）上的任何力系，都可以用一个作用于质心的力和一个扭矩来代替。但我们不会用到这个定理，所以我只是提一下。如果你感兴趣，可以思考一下。其实证明起来并不难。）
 
 
 There is a concept called center of gravity. Center of gravity is not the same as the center of mass. Center of mass only depends on m. It doesn't have anything to do with any forces on it.But center of gravity, if you want a definition like this, is that you try to pick a point where one force acts on it, and the effect of that is equivalent to the total gravitational force. That, in general, does not exist. Center of gravity is the center of mass.If the body is small, center of gravity for a large body does not exist, because the collection of gravitational forces on a large body cannot be replaced by a single force acting at a single point. （有一个概念叫做重心。重心与质心并不相同。质心仅取决于质量分布（m），与作用在其上的任何力无关。但重心，如果要给出这样的定义，就是试图找到一个点，使作用于该点的单一力产生的效果等同于所有重力作用的综合效果。通常情况下，这样的点并不存在。对于小物体而言，重心即质心；但对于大物体来说，重心并不存在，因为作用在大物体上的重力集合无法被简化为作用于单一点的单一力所替代。）
 
 
-Now we are going to do one of the problems of the book. It's page 291, 24p.It's a series of four blocks of the same length, each of them uniform, and you put them at the edge of the table. And the question is, you try to make them as far away from the table as possible. So this is called A1, A2, A3, A4.You want to make each of them as large as possible. The question is, if the total length is L, what are the values of A1, A2, A3, A4? Well, first, in order to make this problem simple, let us choose L to be equal to 4. That makes it easier to think. So let's first analyze the top block.（现在我们要做书中的一个问题。这是第291页的第24题。题目描述的是四个长度相同的均匀木块，将它们放在桌子的边缘。问题是，如何使它们尽可能远离桌子边缘。这四个木块分别称为A1、A2、A3、A4。我们需要使每个木块尽可能向外延伸。问题是，如果总长度为L，那么A1、A2、A3、A4的值分别是多少？为了使问题简化，我们先将L设为4，这样更容易思考。让我们先分析最上面的木块。）
+Now we are going to do one of the problems of the book. It's page 291, 24p.It's a series of four blocks of the same length, each of them uniform, and you put them at the edge of the table. And the question is, you try to make them as far away from the table as possible. So this is called A1, A2, A3, A4.You want to make each of them as large as possible. The question is, if the total length is L, what are the values of A1, A2, A3, A4? Well, first, in order to make this problem simple, let us choose L to be equal to 4. That makes it easier to think. So let's first analyze the top block.（现在我们要做书中的一个问题。这是第 291 页的第 24 题。题目描述的是四个长度相同的均匀木块，将它们放在桌子的边缘。问题是，如何使它们尽可能远离桌子边缘。这四个木块分别称为 A1、A2、A3、A4。我们需要使每个木块尽可能向外延伸。问题是，如果总长度为 $L$，那么A1、A2、A3、A4 的值分别是多少？为了使问题简化，我们先将 L 设为 4，这样更容易思考。让我们先分析最上面的木块。）
 
-I think everybody would agree that the top block is such that A1 is equal to 2. Because if this third block is already stable there, you put the fourth on. And clearly, if you make it just halfway going out, it's just balanced. So we say A1 is equal to 4. A is equal to 2. Then let us consider A1 and A2.Consider the top two blocks together. The center of mass of these two top two blocks is here. Agree? It's symmetrical.So if I put that, if I put the next block here, the top two blocks won't fall. （我认为大家都会同意，最上面的那块积木的A1等于2。因为如果第三块积木已经稳稳地放在那里，你再放上第四块。显然，如果你只让它伸出一半，它刚好能保持平衡。所以我们说A1等于4。A等于2。然后我们来考虑A1和A2。把最上面的两块积木一起考虑。这两块积木的质心在这里。同意吗？这是对称的。所以如果我这样放，如果把下一块积木放在这里，最上面的两块积木就不会掉下来。）
+I think everybody would agree that the top block is such that A1 is equal to 2. Because if this third block is already stable there, you put the fourth on. And clearly, if you make it just halfway going out, it's just balanced. So we say A1 is equal to 2. Then let us consider A1 and A2.Consider the top two blocks together. The center of mass of these two top two blocks is here. Agree? It's symmetrical.So if I put that, if I put the next block here, the top two blocks won't fall. （我认为大家都会同意，最上面的那块积木的 A1 等于  2。因为如果第三块积木已经稳稳地放在那里，你再放上第四块。显然，如果你只让它伸出一半，它刚好能保持平衡。所以我们说 A1 等于2。然后我们来考虑 A1 和 A2。把最上面的两块积木一起考虑。这两块积木的质心在这里。同意吗？这是对称的。所以如果我这样放，如果把下一块积木放在这里，最上面的两块积木就不会掉下来。）
 
+That proves that A1, A2, A2 is equal to 1. Then we consider the center of mass of the top three blocks and put the next one here. In other words, what we have just done is the following.To determine this point, this point should be at the center of mass of the first block. This point should be at the center of mass of the top two blocks. This point should be at the center of mass of the top three blocks.Is everybody happy with what I just said? （这证明了A1A2、A2等于1。然后我们考虑顶部三个块的重心，并将下一个块放在这里。换句话说，我们刚才所做的是以下内容。为了确定这个点，这个点应该在第一个块的重心处。这个点应该在顶部两个块的重心处。这个点应该在顶部三个块的重心处。大家对我刚才说的都明白了吗？）
 
-That proves that A1, A2, A2 is equal to 1. Then we consider the center of mass of the top three blocks and put the next one here. In other words, what we have just done is the following.To determine this point, this point should be at the center of mass of the first block. This point should be at the center of mass of the top two blocks. This point should be at the center of mass of the top three blocks.Is everybody happy with what I just said? （这证明了A1、A2、A2等于1。然后我们考虑顶部三个块的重心，并将下一个块放在这里。换句话说，我们刚才所做的是以下内容。为了确定这个点，这个点应该在第一个块的重心处。这个点应该在顶部两个块的重心处。这个点应该在顶部三个块的重心处。大家对我刚才说的都明白了吗？）
+Okay. So in order to do this systematically, let's take this point to be the origin and call this distance, call this distance X1. X1 is the center of, the position of the center of mass, always referring to this point, of the top block.This we call X2. X2 is the position, is the X coordinate of the center of mass of the top two blocks. And this one we call X3. X3 is the position of the top three blocks. So we know X1 is equal to 2. （好的。为了系统地完成这项工作，让我们把这个点作为原点，并将这段距离称为X1。X1是顶部木块的质心位置，始终相对于这个点。我们称这个为X2。X2是顶部两个木块的质心的X坐标。而这个我们称为X3。X3是顶部三个木块的质心位置。因此我们知道X1等于2。）
 
-Okay. So in order to do this systematically, let's take this point to be the origin and call this distance, call this distance X1. X1 is the center of, the position of the center of mass, always referring to this point, of the top block.This we call X2. X2 is the position, is the X coordinate of the center of mass of the top two blocks. And this one we call X3.X3 is the position of the top three blocks. So we know X1 is equal to 2. （好的。为了系统地完成这项工作，让我们把这个点作为原点，并将这段距离称为X1。X1是顶部木块的质心位置，始终相对于这个点。我们称这个为X2。X2是顶部两个木块的质心的X坐标。而这个我们称为X3。X3是顶部三个木块的质心位置。因此我们知道X1等于2。）
-
-How about the X2? X2 here is the center of mass, is the position of the center of mass of the top two blocks. By definition, 2X2, we assume each block to weigh exactly one.So the top two, that should be equal to MIXI summed. So MIXI summed is equal to X1 plus X1 plus 2. I'm now talking about, I'm calculating this point. So this is the center of mass of the top two blocks.So this is sum of M times the X of the center of mass of the top two blocks, is equal to M1X1 plus M2X2. （X2怎么样？这里的X2是质心，即顶部两个木块的质心位置。根据定义，2X2，我们假设每个木块的重量恰好为1。因此，顶部两个木块的质心应该等于MIXI的总和。所以MIXI的总和等于X1加X1加2。我现在讨论的是，我在计算这个点。所以这是顶部两个木块的质心。因此，这是顶部两个木块的质心的M乘以X的总和，等于M1X1加M2X2。）
-
+How about the X2? X2 here is the center of mass, is the position of the center of mass of the top two blocks. By definition, 2X2, we assume each block to weigh exactly one. So the top two, that should be equal to MIXI summed. So MIXI summed is equal to X1 plus X1 plus 2. I'm now talking about, I'm calculating this point. So this is the center of mass of the top two blocks.So this is sum of M times the X of the center of mass of the top two blocks, is equal to M1X1 plus M2X2. （X2怎么样？这里的X2是质心，即顶部两个木块的质心位置。根据定义，2X2，我们假设每个木块的重量恰好为1。因此，顶部两个木块的质心应该等于MIXI的总和。所以MIXI的总和等于X1加X1加2。我现在讨论的是，我在计算这个点。所以这是顶部两个木块的质心。因此，这是顶部两个木块的质心的M乘以X的总和，等于M1X1加M2X2。）
 
 All M's are equal to one, so it's equal to X1, the position of the center of mass of the first block, that's X1. The position of the center of mass of the second block is X1 plus 2, because you have moved by 2. So I get 2X2 minus X1 is equal to 2. So X2 minus X1 is equal to 1. So I have X2 is equal to 2. Now I do the same for the next one. The next one I have the x3. x3 is the position of the center of mass of the top three blocks.（所有M的值都等于1，因此它等于X1，即第一个方块质心的位置，也就是X1。第二个方块质心的位置是X1加2，因为你移动了2个单位。所以我得到2X2减去X1等于2。因此X2减去X1等于1。于是X2等于2。接下来我对下一个做同样的处理。下一个是x3。x3是顶部三个方块质心的位置。）
 
-So I get 3x3. I am now writing a summation mi xi is equal to sum of m times x of center of mass. So sum of m is 3 because I have three blocks on top.This is the position of the center of mass. And that's equal to... We had proven a theorem earlier that if you have a collection of particles, you divide it into two groups, then the center of mass of the whole thing is equal to the center of mass of two particles. What is the center of mass of this group? You think of this group to be concentrated at one point.You think of this group to be concentrated at one point, so that you have only two particles. （所以我得到3x3。现在我正在写一个求和公式：mi xi等于质量乘以质心的总和。因为我有三个方块在上面，所以m的总和是3。这就是质心的位置。它等于...我们之前证明过一个定理：如果你有一组粒子，将其分成两组，那么整体的质心就等于这两组粒子的质心。这组粒子的质心是什么？你可以把这组粒子想象成集中在一个点上。你可以把这组粒子想象成集中在一个点上，这样你就只有两个粒子了。）
-
+So I get 3 X3. I am now writing a summation mi xi is equal to sum of m times x of center of mass. So sum of m is 3 because I have three blocks on top.This is the position of the center of mass. And that's equal to... We had proven a theorem earlier that if you have a collection of particles, you divide it into two groups, then the center of mass of the whole thing is equal to the center of mass of two particles. What is the center of mass of this group? You think of this group to be concentrated at one point.You think of this group to be concentrated at one point, so that you have only two particles. （所以我得到$3x_3$。现在我正在写一个求和公式：mi xi等于质量乘以质心的总和。因为我有三个方块在上面，所以m的总和是3。这就是质心的位置。它等于...我们之前证明过一个定理：如果你有一组粒子，将其分成两组，那么整体的质心就等于这两组粒子的质心。这组粒子的质心是什么？你可以把这组粒子想象成集中在一个点上。你可以把这组粒子想象成集中在一个点上，这样你就只有两个粒子了。）
 
 And then the center of mass of these two imagined particles is equal to the center of mass of the whole thing. We have proven the theorem.So now we use that theorem. So the three blocks, I first do two of them. Two of them I get, of course, 2x2.I get, of course, 2x2 plus the third one. The third one is that x2 plus 2 times 1. So if I do this, I get 3x3 minus x2 is equal to 2. So I get x3 minus x2 is equal to 2 thirds. If you think about this, it's actually 2 seconds.Now, if you do this next, you get x4 minus x3 is equal to 2 fourths. x5 minus x4 is equal to 2 fifths. So successively, these 8s are equal to 2, 1. The next one is 2 thirds.Then it's 2 fourths, 2 fifths. Everybody happy? Anybody unhappy? （那么这两个假想粒子的质心就等于整体的质心。我们已证明了这个定理。现在就来运用这个定理。这三个方块，我先处理其中两个。两个方块的质心当然是2x2。再加上第三个方块，第三个方块的质心是x2加上2乘以1。这样计算后，得到3x3减去x2等于2。因此x3减去x2等于三分之二。仔细想想，其实是2秒。接下来继续推导，会得到x4减去x3等于四分之二。x5减去x4等于五分之二。以此类推，这8个差值依次等于2、1、三分之二、四分之二、五分之二。大家都明白了吗？有没有人没听懂的？）
 
@@ -73,29 +75,42 @@ This is 1 half, this is 1 third. He writes 1 quarter, so these two are 1 quarter
 
 So therefore all of this is more complicated.But this way of reasoning goes by doing something like this. And then you need to prove that that sum is bigger than, is as large as possible. You can go through the same argument.What that fellow wanted is a logarithmic, this curve. When you integrate it, it becomes a logarithm. And logarithm of infinity is infinity.So that's another proof. But that proof is a more complicated proof. Li Zheng's proof is the simplest.So in principle, you can make it lean as far as possible. （因此，这一切都变得更加复杂。但这种推理方式是通过类似这样的操作进行的。然后你需要证明这个和大于，或者说尽可能大。你可以采用相同的论证方法。那个家伙想要的是一个对数，这条曲线。当你对它进行积分时，它就变成了对数。而无穷大的对数还是无穷大。所以这是另一个证明。但那个证明是一个更复杂的证明。李政的证明是最简单的。所以原则上，你可以让它尽可能地倾斜。）
 
+But of course in practice you can never do that. It will fall out if you try it.If you have several books, you easily find that unless you make very accurate blocks, you cannot make it extend very far. 
 
-But of course in practice you can never do that. It will fall out if you try it.If you have several books, you easily find that unless you make very accurate blocks, you cannot make it extend very far. Now if we have a static situation, that means no motion. That means all time derivatives are zero.In that case, acceleration is equal to zero. So we have two formulas. One is the sum of Fi external.That of course includes gravity is equal to zero. And sum of Ri cross Fi external. The total torque is equal to zero.For a three-dimensional case, this is three equations, this is three equations. （但在实际操作中，你永远无法做到这一点。如果你尝试这样做，它就会倒塌。如果你有几本书，你很容易发现，除非你做出非常精确的积木，否则你无法让它延伸得很远。现在如果我们有一个静态的情况，就意味着没有运动。这意味着所有时间导数都为零。在这种情况下，加速度等于零。所以我们有两个公式。一个是外力Fi的总和。当然，这包括重力等于零。以及Ri与外力Fi的叉积总和。总扭矩等于零。对于三维情况，这是三个方程，这也是三个方程。）
 
+### 13.4 平衡问题
 
-So you have six equations. Let me emphasize that in doing this, you can replace, we have proven that you can replace the gravitational force by a single force.Since we usually talk about in daily life, small objects. And the other one is that you have to be careful. Only include, only include external forces on the body.Not forces by the body on other things. The reason I say this is because I had taught freshman physics in student book. And one of the great confusions in solving this equilibrium problems by the students was that some students got confused about, they include some of the forces exerted by the body on other things.（所以你有六个方程。我要强调的是，在这样做的时候，你可以替换，我们已经证明你可以用一个单一的力来代替重力。因为我们通常在日常生活中谈论的是小物体。另一个需要注意的是，你必须要小心。只包括，只包括作用在物体上的外力。不包括物体对其他物体施加的力。我之所以这么说，是因为我曾经在学生的课本中教授过新生物理。学生在解决这些平衡问题时最大的困惑之一就是，有些学生会混淆，他们包括了物体对其他物体施加的一些力。）
+Now if we have a static situation, that means no motion. That means all time derivatives are zero.In that case, acceleration is equal to zero. So we have two formulas. One is the sum of Fi external.That of course includes gravity is equal to zero. And sum of Ri cross Fi external. The total torque is equal to zero.For a three-dimensional case, this is three equations, this is three equations. （但在实际操作中，你永远无法做到这一点。如果你尝试这样做，它就会倒塌。如果你有几本书，你很容易发现，除非你做出非常精确的积木，否则你无法让它延伸得很远。现在如果我们有一个静态的情况，就意味着没有运动。这意味着所有时间导数都为零。在这种情况下，加速度等于零。所以我们有两个公式。一个是外力Fi的总和。当然，这包括重力等于零。以及Ri与外力Fi的叉积总和。总扭矩等于零。对于三维情况，这是三个方程，这也是三个方程。）
 
+$$\sum \vec{F}_{i \text{ ext}}=0 \quad\quad \sum \vec{r}_{i} \times \vec{F}_{i \text{ ext}}=0$$
+
+So you have six equations. Let me emphasize that in doing this, you can replace, we have proven that you can replace the gravitational force by a single force.Since we usually talk about in daily life, small objects. And the other one is that you have to be careful. Only include, only include external forces on the body. Not forces by the body on other things. The reason I say this is because I had taught freshman physics in student book. And one of the great confusions in solving this equilibrium problems by the students was that some students got confused about, they include some of the forces exerted by the body on other things.（所以你有六个方程。我要强调的是，在这样做的时候，你可以替换，我们已经证明你可以用一个单一的力来代替重力。因为我们通常在日常生活中谈论的是小物体。另一个需要注意的是，你必须要小心。只包括，只包括作用在物体上的外力。不包括物体对其他物体施加的力。我之所以这么说，是因为我曾经在学生的课本中教授过新生物理。学生在解决这些平衡问题时最大的困惑之一就是，有些学生会混淆，他们包括了物体对其他物体施加的一些力。）
 
 If your problem has several bodies, you have to be careful that you look at each body separately. And look at the forces on that body. And not forces by that body on another body.So remember this line. For a three-dimensional problem, we have three equations here, three equations here, we have six equations. So if the problem starts with the six unknowns, in general you can solve for the six.But there are cases where if there are too many unknowns, then if there are more unknowns for three-dimensional problems than six, then you have a case where you have no unique solution. （如果你的问题涉及多个物体，你必须小心地分别观察每个物体。并且要关注作用在该物体上的力，而不是该物体作用于其他物体的力。记住这一点。对于三维问题，我们这里有三个方程，那里有三个方程，总共有六个方程。所以如果问题一开始有六个未知数，一般来说你可以解出这六个未知数。但也有情况是，如果未知数太多，比如三维问题中的未知数超过六个，那么你就无法得到唯一的解。）
 
+But you don't have to count it that way. Let's for example take a simple case which is a four-legged stool. If I have a four-legged stool, and the whole body has a weight here, and you are asked to evaluate the four forces on the four legs. The body suffers five forces. One is the gravity in the center,  and then the four forces on the four legs.So you have F1, F2, F3, F4. You have F1 plus F2 plus F3 plus F4 is equal to mg. If you take the angular momentum, you get the, suppose this distance is called r. This diagonal distance we call it r. Then let's put this one be F1, this F2, this F3, this F4.Then F1 and F3, I claim F1 minus F3 times r. （但你不必这样计算。举个简单的例子，比如一个四脚凳。如果我有一个四脚凳，整个凳子的重量集中在这里，现在需要你评估四个腿上的力。凳子受到五个力的作用：一个是中心的重力，然后是四个腿上的四个力。所以你有F1、F2、F3、F4。F1加F2加F3加F4等于mg。如果你计算角动量，假设这个距离是r，对角线的距离我们称之为r。然后我们设这个是F1，这个是F2，这个是F3，这个是F4。那么F1和F3，我认为F1减去F3乘以r。）
 
-But you don't have to count it that way. Let's for example take a simple case which is a four-legged stool.If I have a four-legged stool, and the whole body has a weight here, and you are asked to evaluate the four forces on the four legs. The body suffers five forces. One is the gravity in the center, and then the four forces on the four legs.So you have F1, F2, F3, F4. You have F1 plus F2 plus F3 plus F4 is equal to mg. If you take the angular momentum, you get the, suppose this distance is called r. This diagonal distance we call it r. Then let's put this one be F1, this F2, this F3, this F4.Then F1 and F3, I claim F1 minus F3 times r. （但你不必这样计算。举个简单的例子，比如一个四脚凳。如果我有一个四脚凳，整个凳子的重量集中在这里，现在需要你评估四个腿上的力。凳子受到五个力的作用：一个是中心的重力，然后是四个腿上的四个力。所以你有F1、F2、F3、F4。F1加F2加F3加F4等于mg。如果你计算角动量，假设这个距离是r，对角线的距离我们称之为r。然后我们设这个是F1，这个是F2，这个是F3，这个是F4。那么F1和F3，我认为F1减去F3乘以r。）
-
-
-It's a torque in this direction. And that has to be equal to zero. While F2 minus F4 times r gives you a torque in a perpendicular direction.So that also has to be equal to zero. Does everybody agree with these three formulas? It's a rectangle. So the F1 and F3, one gives a torque this way, the other gives a torque this way.So you have a torque which is in a diagonal direction. F2 and F4 gives a torque in a perpendicular direction. And since the vector has to be equal to zero, so both components have to be equal to zero, so we have these two.In this case, you have only three equations, and you have four unknowns. （这是一个沿这个方向的扭矩。它必须等于零。而F2减去F4乘以r则给出了一个垂直于该方向的扭矩。所以这个也必须等于零。大家都同意这三个公式吗？这是一个矩形。因此，F1和F3，一个产生这个方向的扭矩，另一个产生那个方向的扭矩。所以你会得到一个对角线方向的扭矩。F2和F4则产生一个垂直方向的扭矩。由于矢量必须等于零，所以两个分量都必须等于零，因此我们得到了这两个方程。在这种情况下，你只有三个方程，但有四个未知数。）
-
-
-So therefore, it's indeterminate. In fact, what this equation says is that F1 is equal to F3, F2 is equal to F4.But, for example, I can make F1 equal to... So I can make, for example, F1 equal to F3 equal to one-half of mg, and F2 equal to F4 equal to zero. In other words, the first one and the third one, diametrically opposite, but equal forces, and the other two have no force. Actually, intuitively, you know this is the case.It's the case where only these two touch the ground. If these two do not touch the ground, then these two forces, exactly each of them becomes one-half of mg. （因此，这是不确定的。实际上，这个方程表明F1等于F3，F2等于F4。但是，例如，我可以让F1等于……比如，我可以让F1等于F3等于mg的一半，而F2等于F4等于零。换句话说，第一个和第三个力，虽然方向相反，但大小相等，而另外两个力为零。实际上，凭直觉你就知道情况是这样的。这种情况就是只有这两个接触地面。如果这两个不接触地面，那么这两个力，每一个都正好等于mg的一半。）
+$$F_{1}+F_{2}+F_{3}+F_{4}=mg$$
+$$(F_{1}-F_{3})r=0, \quad(F_{2}-F_{4})r=0$$
+所以 $F_{1}=F_{3},\, F_{2}=F_{4}$
 
 
-But if these two touch the ground and these two do not, then you have the other solution, which is the opposite of this.And you can have any linear combination of them. So if you have a smooth floor, if you put this heavy stool on it, what happens? You know all four of them would have the same weight. In other words, the true solution for a physical situation is each of the forces, F1 to F4, is equal to one-quarter of mg.How do you know? Why do you believe that all four are equal for a real situation? （但如果这两个接触地面而这两个不接触，那么你就得到了另一种解决方案，与这个相反。而且你可以有它们的任何线性组合。所以如果你有一个光滑的地板，如果你把这个沉重的凳子放在上面，会发生什么？你知道所有四个都会承受相同的重量。换句话说，物理情况的真正解决方案是每个力，F1到F4，等于mg的四分之一。你怎么知道？为什么你相信在实际情况中所有四个都是相等的？）
+It's a torque in this direction. And that has to be equal to zero. While F2 minus F4 times r gives you a torque in a perpendicular direction.So that also has to be equal to zero. Does everybody agree with these three formulas? It's a rectangle. So the F1 and F3, one gives a torque this way, the other gives a torque this way.So you have a torque which is in a diagonal direction. F2 and F4 gives a torque in a perpendicular direction. And since the vector has to be equal to zero, so both components have to be equal to zero, so we have these two. In this case, you have only three equations, and you have four unknowns. （这是一个沿这个方向的扭矩。它必须等于零。而F2减去F4乘以r则给出了一个垂直于该方向的扭矩。所以这个也必须等于零。大家都同意这三个公式吗？这是一个矩形。因此，F1和F3，一个产生这个方向的扭矩，另一个产生那个方向的扭矩。所以你会得到一个对角线方向的扭矩。F2和F4则产生一个垂直方向的扭矩。由于矢量必须等于零，所以两个分量都必须等于零，因此我们得到了这两个方程。在这种情况下，你只有三个方程，但有四个未知数。）
+
+So therefore, it's indeterminate. In fact, what this equation says is that F1 is equal to F3, F2 is equal to F4. But, for example, I can make F1 equal to... So I can make, for example, F1 equal to F3 equal to one-half of mg, and F2 equal to F4 equal to zero. In other words, the first one and the third one, diametrically opposite, but equal forces, and the other two have no force. Actually, intuitively, you know this is the case.It's the case where only these two touch the ground. If these two do not touch the ground, then these two forces, exactly each of them becomes one-half of mg. （因此，这是不确定的。实际上，这个方程表明F1等于F3，F2等于F4。但是，例如，我可以让F1等于……比如，我可以让F1等于F3等于mg的一半，而F2等于F4等于零。换句话说，第一个和第三个力，虽然方向相反，但大小相等，而另外两个力为零。实际上，凭直觉你就知道情况是这样的。这种情况就是只有这两个接触地面。如果这两个不接触地面，那么这两个力，每一个都正好等于mg的一半。）
+
+$$F_{1}=F_{3}=\frac{mg}{2},\quad F_{2}=F_{4}=0$$
+
+But if these two touch the ground and these two do not, then you have the other solution, which is the opposite of this. And you can have any linear combination of them. So if you have a smooth floor, if you put this heavy stool on it, what happens? You know all four of them would have the same weight. In other words, the true solution for a physical situation is each of the forces, F1 to F4, is equal to one-quarter of mg.How do you know? Why do you believe that all four are equal for a real situation? （但如果这两个接触地面而这两个不接触，那么你就得到了另一种解决方案，与这个相反。而且你可以有它们的任何线性组合。所以如果你有一个光滑的地板，如果你把这个沉重的凳子放在上面，会发生什么？你知道所有四个都会承受相同的重量。换句话说，物理情况的真正解决方案是每个力，F1到F4，等于mg的四分之一。你怎么知道？为什么你相信在实际情况中所有四个都是相等的？）
+
+It is because there are other things that you have to consider, and that comes to elasticity. The ground is slightly elastic, 
+
+(50.13)
 
 
-It is because there are other things that you have to consider, and that comes to elasticity. The ground is slightly elastic, and if one leg goes down too much, there will be a tremendous force forcing it upwards. So if it is an elastic thing, so think of a rubber floor, then it will become, then it is, if you want to really analyze this, it won't be that one sinks deeper than another one.The simplest case is all four of them to go down by the same amount, and therefore the reaction's force, F1, F2, F3, F4, will also be identical. （这是因为你还需要考虑其他因素，这就涉及到弹性问题。地面具有一定弹性，如果某条腿下陷过深，就会产生巨大的反作用力将其向上推。因此如果考虑弹性地面——比如想象一个橡胶地板——当你真正分析时，就不会出现某条腿比其他腿陷得更深的情况。最理想的状态是四条腿均匀下陷相同深度，这样每条腿受到的反作用力F1、F2、F3、F4也会完全相同。）
+
+
+and if one leg goes down too much, there will be a tremendous force forcing it upwards. So if it is an elastic thing, so think of a rubber floor, then it will become, then it is, if you want to really analyze this, it won't be that one sinks deeper than another one.The simplest case is all four of them to go down by the same amount, and therefore the reaction's force, F1, F2, F3, F4, will also be identical. （这是因为你还需要考虑其他因素，这就涉及到弹性问题。地面具有一定弹性，如果某条腿下陷过深，就会产生巨大的反作用力将其向上推。因此如果考虑弹性地面——比如想象一个橡胶地板——当你真正分析时，就不会出现某条腿比其他腿陷得更深的情况。最理想的状态是四条腿均匀下陷相同深度，这样每条腿受到的反作用力F1、F2、F3、F4也会完全相同。）
 
 
 So if you want to consider a physical case of an over-determined system, then you have to consider the property of the surface. If the surface is uniform, like a rubber or a soft floor, then of course you would get equal ones.But if the floor is such that two of the legs are on rubber, the other two legs are on a hard floor, you immediately know what happens. The two legs would sink deeper into the rubber, and therefore the thing would tilt, and the forces would not be identical on the four legs. （因此，如果你想考虑一个超定系统的物理实例，就必须考虑表面的特性。如果表面是均匀的，比如橡胶或柔软的地板，那么你当然会得到相同的结果。但如果地板的情况是两条腿在橡胶上，另外两条腿在硬地板上，你立刻就能知道会发生什么。两条腿会更深地陷入橡胶中，因此物体会倾斜，四条腿上的力也不会相同。）
