--- a/基础物理/杨振宁/第九讲.md
+++ b/基础物理/杨振宁/第九讲.md
@@ -1,28 +1,37 @@
 
 ## 第九章：质心和线性动量
 
-Today I'm going to talk about Chapter 9. Chapter 9 is mainly about the Center of Mass. These are all extremely important concepts. First, we need to define central mass. There are two different definitions for this kind of quantum mechanics. One is the geometric definition. The other is the unidirectional definition. You can prove that these two definitions are the same.（今天我要讲的是第九章。第九章主要讲的是*质心*。这些都是极其重要的概念。首先，我们需要定义质心。这种情形之下，有两种不同的定义。一种是几何定义。另一种是代数定义。你可以证明这两种定义是相同的。）
+### 质心
+
+Today I'm going to talk about Chapter 9. Chapter 9 is mainly about the Center of Mass. These are all extremely important concepts. First, we need to define central mass. There are two different definitions for this kind of quantum mechanics. One is the geometric definition. The other is the unidirectional definition. You can prove that these two definitions are the same.（今天我要讲的是第九章。第九章主要讲的是 *质心*。这些都是极其重要的概念。首先，我们需要定义质心。这种情形之下，有两种不同的定义：一种是几何定义，另一种是代数定义。你可以证明这两种定义是相同的。）
 
 $$\vec{r}_{\text{com}} = \frac{1}{M} \sum_{i=1}^{n} m_i \vec{r}_i,$$
-下标 com = center of mass，质心的意思。
+下标 com = center of mass，质心的意思，$M$ 是所有粒子的总质量。
 
-Today, we will use the unidirectional definition. Let's say there are many particles. Their mass is m i, and their coordinate is r i. Given a coordinate system, there are many r i and m i. So, if we sum up m i, r i, and divide by the total mass, we get the central mass, the coordinate. For example, if there are three particles, we get the central mass. This definition is very simple. If there are only two particles, in one-dimension, we know that one particle is heavy and the other is light.（今天我们将使用代数定义。假设有很多粒子，它们的质量为 $m_i$，坐标为 $r_i$。给定一个坐标系，会有许多 $r_i$ 和 $m_i$。因此，如果我们把 $m_i$ 和 $r_i$ 相乘，再除以总质量，就能得到质心坐标。例如，如果有三个粒子，我们就能得到质心。这个定义非常简单。如果只有两个粒子，在一维情况下，我们知道一个粒子较重，另一个较轻。）
+Today, we will use the unidirectional definition. Let's say there are many particles. Their mass is m i, and their coordinate is r i. Given a coordinate system, there are many r i and m i. So, if we sum up m i, r i, and divide by the total mass, we get the central mass, the coordinate. For example, if there are three particles, we get the central mass. This definition is very simple. If there are only two particles, in one-dimension, we know that one particle is heavy and the other is light.（今天我们将使用代数定义。假设有很多粒子，它们的质量为 $m_i$，坐标为 $r_i$。给定一个坐标系，会有许多 $r_i$ 和 $m_i$。因此，如果我们把 $m_i$ 和 $r_i$ 相乘，再除以总质量，就能得到质心坐标。例如，如果有三个粒子，我们就能得到质心。这个定义非常简单。如果只有两个粒子，在一维情况下，我们假设一个粒子较重，另一个较轻。）
 
-If we divide by the two particles, in one-dimension, we get m 1 x 1 plus m 2 x 2 divided by m 1 plus m 2. This is the central mass, the x-central mass. For example, if m 1 and m 2 are equal, this is 1, and m 2 is 2. Then, m 1 and m 2 are obvious. Because 2 has a bigger weight, so it is in one-third place. The central mass is here. I think the intuition is very simple. So, this is a more general definition.(如果我们将两个粒子在一维空间中进行划分，会得到(m₁x₁ + m₂x₂)/(m₁ + m₂)。这就是质心位置，即x方向的质心坐标。举个例子，假设m₁=1，m₂=2（显然m₂质量更大）。由于第二个粒子质量更大，质心会偏向它三分之一的位置。质心就在这里。我认为这个原理非常直观。因此，这是一个更具普适性的定义。)
+If we divide by the two particles, in one-dimension, we get m 1 x 1 plus m 2 x 2 divided by m 1 plus m 2. This is the central mass, the x-central mass. For example, if m 1 and m 2 are equal, this is 1, and m 2 is 2. Then, m 1 and m 2 are obvious. Because 2 has a bigger weight, so it is in one-third place. The central mass is here. I think the intuition is very simple. So, this is a more general definition.(如果我们将两个粒子在一维空间中进行划分，会得到 $(m_{1}x_{1}+ m_{2}x_{2})/(m_{1} + m_{2})$。这就是质心位置，即 $x$ 方向的质心坐标。举个例子，假设 $m_1=1, m_2=2$（显然 $m_2$ 质量更大）。由于第二个粒子质量更大，质心会偏向它三分之一的位置。质心就在这里。我认为这个原理非常直观。因此，这是一个更具普适性的定义。)
 
-In this definition, the first one is the theorem. The r-central mass, so defined, is independent of the choice of coordinate system. In general, an algebra is defined as a central mass. However, there are three particles. They are defined as a central mass. I used a coordinate system. If I use another coordinate system, is it still the same central mass? The theorem says yes. But it needs a proof. This book is very vague.(在这个定义中，第一条是定理。如此定义的 *质心与坐标系的选择无关*。一般来说，代数被定义为一个质心。然而，这里存在三个粒子。它被定义为一个质心。我使用了一个坐标系。如果我使用另一个坐标系，它仍然是同一个质心吗？定理说答案是肯定的。但这需要一个证明。这本书说得非常含糊。)
+In this definition, the first one is the theorem. The r-central mass, so defined, is independent of the choice of coordinate system. In general, an algebra is defined as a central mass. However, there are three particles. They are defined as a central mass. I used a coordinate system. If I use another coordinate system, is it still the same central mass? The theorem says yes. But it needs a proof. This book is very vague.(而且，如此定义的 *质心与坐标系的选择无关*。在一个坐标系中的质心，如果换用另一个坐标系，它仍然会是同一个质心吗？定理说答案是肯定的。但这需要一个证明。这本书说得非常含糊。)
 
-I found that the purpose of this book is to make it easy for everyone to understand. But I hope everyone can understand that there are some sensitive points. This proof is actually very simple. If you take a coordinate system, and I take another coordinate system, it is a displacement. Change of axis by displacement. By displacement, you move the axis parallel. But you change the origin. So, if you move the coordinate axis parallel, and change the axis, then we ask, what is the RRI? I call it RRI prime. RRI prime is RRI plus displacement.(我发现 *这本书的目的是为了让每个人都能轻松理解。但我希望大家能明白其中有一些敏感点*。这个证明其实非常简单。如果你取一个坐标系，我取另一个坐标系，这就是一个位移。通过位移改变坐标轴。通过位移，你可以平行移动坐标轴。但你会改变原点。所以，如果你平行移动坐标轴并改变坐标轴，那么我们问，$r_{i}'$ 是什么？RI撇等于RI加上位移。)
+#### 质心与坐标系的平移无关
+
+I found that the purpose of this book is to make it easy for everyone to understand. But I hope everyone can understand that there are some sensitive points. This proof is actually very simple. If you take a coordinate system, and I take another coordinate system, it is a displacement. Change of axis by displacement. By displacement, you move the axis parallel. But you change the origin. So, if you move the coordinate axis parallel, and change the axis, then we ask, what is the RRI? I call it RRI prime. RRI prime is RRI plus displacement.(我发现 *这本书的目的是为了让每个人都能轻松理解。但我希望大家能明白其中有一些敏感点*。这个证明其实非常简单。如果你取一个坐标系，我取另一个坐标系，这就是一个位移。通过位移改变坐标轴。通过位移，你可以平行移动坐标轴，你会改变原点。所以，如果你平行移动坐标轴并改变坐标轴，那么我们问，$r_{i}'$ 是什么？RI撇等于RI加上位移。)
+
+![[Pasted image 20251115222816.png|250]]
 $$\vec{r}^\prime = \vec{r} + \vec{d}$$
 
 So, RRI prime is RRI plus a fixed displacement. This fixed displacement is the axis of these two coordinates. The coordinates are moving from here to here. If this is... If this is... This is R. This is the original axis, XY. This is X prime, Y prime. So, this displacement... It is obvious that... Let me see.  RRI prime is upside down. This is... Sorry. This is the original axis. This is... The fixed point is here. This is R. This is R prime. It is obvious that R prime is R plus D. So, this is XY.(因此，RI prime 就是 RI 加上一个固定位移。这个固定位移就是这两个坐标轴之间的位移。坐标轴从这里移动到这里。如果这是……如果这是……这是 R。这是原始坐标轴 XY。这是 X prime，Y prime。所以，这个位移……很明显……让我看看。RRI prime 是倒置的。这是……抱歉。这是原始坐标轴。这是……固定点在这里。这是 R。这是 R prime。很明显，R prime 等于 R 加 D。所以，这是 XY。)
 
-I made a mistake. This is XY. This is X prime, Y prime. This is the displacement. This is R. This is R prime. It is obvious that R prime is R plus D. This D has nothing to do with R. This D is the displacement of the coordinate origin. So, it has nothing to do with the number of parts. It has nothing to do with the number of parts. So, what is the rest of the formula? It is... By definition, it is equal to... So, it is equal to... plus D. This is obvious that... plus... This D is independent of I. So, it is equal to summation of M, I, D. So... So, R prime is the center of mass.(我犯了一个错误。这是XY。这是X'，Y'。这是位移。这是R。这是R'。显然，R'等于R加D。这个D与R无关。这个D是坐标原点的位移。因此，它与零件数量无关。它与零件数量无关。那么，公式的其余部分是什么？根据定义，它等于...所以，它等于...加D。显然...加...这个D与I无关。因此，它等于M、I、D的和。所以...所以，R'是质心。)
+I made a mistake. This is XY. This is X prime, Y prime. This is the displacement. This is R. This is R prime. It is obvious that R prime is R plus D. This D has nothing to do with R. This D is the displacement of the coordinate origin. So, it has nothing to do with the number of parts. It has nothing to do with the number of parts. So, what is the rest of the formula? It is... By definition, it is equal to... So, it is equal to... plus D. This is obvious that... plus... This D is independent of I. So, it is equal to summation of M, I, D. So... So, R prime is the center of mass.(我犯了一个错误。这是XY。这是X'，Y'。这是位移。这是R。这是R'。显然，R'等于R加D。这个D与R无关。这个D是坐标原点的位移。因此，它与粒子数量无关。那么，公式的其余部分是什么？根据定义，它等于...所以，它等于...加D。显然...加...这个D与I无关。因此，它等于M、I、D的和。所以...所以，R'是质心。)
 
 所以有：$$\sum m_{i}\vec{r_{i}}'=\sum m_{i}(\vec{r_{i}}+\vec{d})=\sum m_{i}r_{i}+\left( \sum m_{i} \right)\vec{d}$$
 那么在 $r'$ 坐标系下的质心：$$\vec{r}_{\text{com}}'=\frac{\sum m_{i}\vec{r_{i}}'}{\sum m_{i}}=\frac{\sum m_{i}\vec{r_{i}}}{\sum m_{i}}+\vec{d}=\vec{r}_{\text{com}}+\vec{d}$$也就是说质心的位置其实还是原来那个点。
 
+
 By definition, it is summation of M. It is equal to summation of M, I, R, I prime. This is the new center of mass, D. D... So, it is equal to summation of M, I, R, I. It is summation of M. Plus... So, it is equal to R, center of mass, plus D. So, in other words, the new center of mass, the coordinate, is equal to the original center of mass, plus D. So, this is the same as the picture. So, this represents the center of mass.(根据定义，它是M的总和。它等于M、I、R、I'的总和。这是新的质心D。D...所以，它等于M、I、R、I的总和。它是M的总和。加上...所以，它等于R（质心）加上D。*换句话说，新的质心坐标等于原来的质心坐标加上 D*。这与图示一致。因此，这代表质心。)
+
+#### 质心与坐标系的旋转无关
 
 The two definitions are in the same place. This is the first part of the formula. The first part is... I don't move. I don't move the origin, but rotate it. Rotate the coordinate x, to see if the definition is still the same. This is a bit complicated to write, but it is actually very simple to explain.(两个定义在同一个位置。这是公式的第一部分。第一部分是……我不移动。我不移动原点，而是旋转它。旋转坐标x，看看定义是否仍然相同。写起来有点复杂，但实际上解释起来非常简单。)
 
@@ -44,7 +53,7 @@ They are all one transformation. So a rotation is represented algebraically by a
 > 1. $Q^T Q = I$，其中 $Q^T$ 是 $Q$ 的转置矩阵，$I$ 是单位矩阵。
 > 2. $Q^{-1} = Q^T$，即正交矩阵的逆等于其转置。
 > 
-> 正交矩阵的一个重要性质是它保持向量的长度和向量之间的夹角不变。
+> 正交矩阵的一个重要性质是它保持向量的长度和向量之间的夹角不变，这实际上就是旋转效果。
 
 It doesn't mean that you can write nine as you like. You can write nine as you like. You can try it. You can do 2x2. After two dimensions... Let's take two dimensions. Two dimensions are x and y. Then x prime is equal to cosine theta. It becomes like this when you rotate it. Let's say this is a theta. It becomes cosine theta x plus sine theta y. y prime is equal to minus sine theta x plus cosine theta y. Think about it carefully.（这并不意味着你可以随意书写数字9。你可以随心所欲地写9，不妨试试看。你可以计算2乘2。在二维空间中...我们以二维为例。二维坐标是x和y。那么x'等于cosθ。旋转后就变成这样。假设这个角度是θ，就变成了cosθ乘以x加上sinθ乘以y。y'等于负sinθ乘以x加上cosθ乘以y。仔细想想看。）
 
@@ -56,16 +65,18 @@ $$\begin{equation}\begin{alignedat}{4} &x'&&=x&&\cos\theta+y&&\sin\theta,\\&y'&&
 \cos \theta & \sin \theta \\ 
 -\sin \theta & \cos \theta 
 \end{bmatrix}$$
-Look at this cosine theta and sine theta. These four numbers are a 2x2 matrix. This matrix is called orthogonal. These three dimensions are 3x3. n dimensions are nxn. But look at these four numbers. They are related to each other. They can't be moved around. The same nine numbers can't be moved around.（看看这个cosθ和sinθ。这四个数构成一个2x2矩阵。这个矩阵被称为正交矩阵。这三个维度是3x3矩阵。n个维度就是nxn矩阵。但看看这四个数，它们是相互关联的。它们不能随意调换位置。同样的，这九个数也不能随意调换位置。）
+Look at this cosine theta and sine theta. These four numbers are a 2x2 matrix. This matrix is called orthogonal. These three dimensions are 3x3. n dimensions are nxn. But look at these four numbers. They are related to each other. They can't be moved around. The same nine numbers can't be moved around.（看看这个 cosθ 和 sinθ。这四个数构成一个 2x2 矩阵。这个矩阵被称为正交矩阵。这三个维度是 3x3 矩阵。n 个维度就是 nxn 矩阵。但看看这四个数，它们是相互关联的。它们不能随意调换位置。同样的，这九个数也不能随意调换位置。）
 
-Mathematically, they form an orthogonal matrix. Anyway, what's important to us now is... Let me show you what I just showed you. You combine the three components of R, I, X, Y, and Z with a 3x3 matrix. It becomes R, I, prime. The left side becomes the same combination. They are all linear. This proves the statement I just made. The R center of mass, as so defined, is independent of the choice of coordinate system. We just proved that it is independent of the rotation of the coordinate system.（从数学上讲，它们构成了一个正交矩阵。不过现在对我们重要的是……让我再演示一遍刚才的内容。你把R、I、X、Y、Z这三个分量与一个3x3矩阵组合起来，就得到了R、I撇。左边也会变成相同的组合形式。这些都是线性的。这证明了我刚才的论断——*如此定义的R质心，与坐标系的选择无关。我们刚刚证明了它与坐标系的旋转无关。*）
+Mathematically, they form an orthogonal matrix. Anyway, what's important to us now is... Let me show you what I just showed you. You combine the three components of R, I, X, Y, and Z with a 3x3 matrix. It becomes R, I, prime. The left side becomes the same combination. They are all linear. This proves the statement I just made. The R center of mass, as so defined, is independent of the choice of coordinate system. We just proved that it is independent of the rotation of the coordinate system.（从数学上讲，它们构成了一个正交矩阵。不过现在对我们重要的是……让我再演示一遍刚才的内容。你把 $r_i$ 的 X、Y、Z这三个分量与一个 3x3 矩阵组合起来，就得到了 $r_{i}'$。左边也会变成相同的组合形式。这些都是线性的。这证明了我刚才的论断——*如此定义的  $r_{\text{com}}$，与坐标系的选择无关。我们刚刚证明了它与坐标系的旋转无关。*）
 
-Since the translation and rotation are independent, you can always rotate and displace from one coordinate system to another. That's why it's called QED. Second, rotation. All linear. The key word is all linear. That's why it's called QED. Is there a problem with what I just said? There are two problems. The first one is that you need to prove it. That's the most important thing. You don't usually talk about it. You need to prove it. The second one is whether you can prove it.(由于平移和旋转是独立的，你总是可以通过旋转和位移从一个坐标系转换到另一个坐标系。这就是为什么它被称为QED。其次，旋转。都是线性的。关键词是"都是线性的"。这就是为什么它被称为QED。我刚才说的有什么问题吗？有两个问题。第一个是你需要证明它。这是最重要的事情。你通常不会谈论这个。你需要证明它。第二个是你能不能证明它。)
+Since the translation and rotation are independent, you can always rotate and displace from one coordinate system to another. That's why it's called QED. Second, rotation. All linear. The key word is all linear. That's why it's called QED. Is there a problem with what I just said? There are two problems. The first one is that you need to prove it. That's the most important thing. You don't usually talk about it. You need to prove it. The second one is whether you can prove it. It's very simple. After you think about it, you need to prove that rotation and translation are independent. These are all very simple things. OK, so that's our first problem. (由于平移和旋转是独立的，你总是可以通过旋转和位移从一个坐标系转换到另一个坐标系。这就是为什么它被称为QED。其次，旋转。都是线性的。关键词是"都是线性的"。这就是为什么它被称为QED。我刚才说的有什么问题吗？有两个问题。第一个是你需要证明它。这是最重要的事情。你通常不会谈论这个。你需要证明它。第二个是你能不能证明它。这很简单。仔细想想，你需要证明旋转和平移是相互独立的。这些都是非常基础的概念。好了，这就是我们的第一个定理。)
 
 > [!NOTE]
 > QED 是拉丁短语 "Quod Erat Demonstrandum" 的缩写，意思是“这正是所要证明的”。在数学和逻辑中，它通常用于标记证明的结束，表明已经成功地证明了之前提出的命题或定理。
 
-It's very simple. After you think about it, you need to prove that rotation and translation are independent. These are all very simple things. OK, so that's our first problem. Now I'm going to talk about the second problem. Consider two groups of particles. The first group of particles is called mi. Its coordinate is ri. The second group of particles is called mj. Its position is sj. For example, there are three particles in the first group. Then there are four particles in the second group.(这很简单。仔细想想，你需要证明旋转和平移是相互独立的。这些都是非常基础的概念。好了，这就是我们的第一个定理。现在我要讨论第二个定理。考虑两组粒子。第一组粒子称为mi，其坐标为ri。第二组粒子称为mj，其位置为sj。举例来说，第一组有三个粒子，第二组则有四个粒子。)
+#### 质心的整体效应
+
+Now I'm going to talk about the second problem. Consider two groups of particles. The first group of particles is called mi. Its coordinate is ri. The second group of particles is called mj. Its position is sj. For example, there are three particles in the first group. Then there are four particles in the second group.(现在我要讨论第二个定理。考虑两组粒子。第一组粒子称为mi，其坐标为ri。第二组粒子称为mj，其位置为sj。举例来说，第一组有三个粒子，第二组则有四个粒子。)
 
 第一组三个粒子，质量为 $M_{i}$，位置为 $\vec{r}_{i}$；第二组四个粒子，质量为 $M_{j}$，位置为 $\vec{s}_{j}$,
 
@@ -73,20 +84,21 @@ The first group of particles has a center of mass. For example, here. The second
 
 One with mass sum of ri. This is the total mass of the first group. At the center of mass of these particles. The other with mass sum of mj. This is another group. At the center of mass of these particles. At the center of mass of these particles. Imagine that all these masses are concentrated at that point. And then for the second group, you concentrate all those second groups of masses at the center of mass of the second group.(一组质量为ri的总和。这是第一组的总质量。位于这些粒子的质心处。另一组质量为 mj 的总和。这是另一组。位于这些粒子的质心处。想象所有这些质量都集中在该点上。然后对于第二组，你将所有第二组的质量集中在第二组的质心处。)
 
-This theorem says the center of mass of the total system is exactly the center of mass of two particles. One with mass sum of ri. Proof. The R of the total center of mass. We write it like this. By definition, it is equal to the sum of ri, plus the sum of mj, plus the sum of mi, plus the sum of mj.（该定理表明，整个系统的质心恰好就是两个粒子的质心。其中一个粒子的质量为ri的总和。证明如下：整个系统质心的R值。我们这样表示。根据定义，它等于ri的总和加上mj的总和，再加上mi的总和，最后加上mj的总和。）
+This theorem says the center of mass of the total system is exactly the center of mass of two particles. One with mass sum of ri. Proof. The R of the total center of mass. We write it like this. By definition, it is equal to the sum of ri, plus the sum of mj, plus the sum of mi, plus the sum of mj.（该定理表明，整个系统的质心恰好就是两个质心的质心。其中一个质心的质量为ri的总和。证明如下：整个系统质心的R值。我们这样表示。根据定义，它等于ri的总和加上mj的总和，再加上mi的总和，最后加上mj的总和。）
 
 $$\begin{align}
 \vec{R}_{\text{com}}&=\frac{\sum M_{i} \vec{r}_{i} + \sum M_{j} \vec{s}_{j}}{\left( \sum M_{i} \right) + \left( \sum M_{j} \right)} \\[1.2ex]
 &=\frac{\frac{\sum M_{i}\vec{r}_{i}}{\sum M_{i}} \cdot \left( \sum M_{i} \right)+\frac{\sum M_{j}\vec{s}_{j}}{\sum M_{j}} \cdot \left( \sum M_{j} \right)}{\left( \sum M_{i} \right) + \left( \sum M_{j} \right)}
 \end{align}$$
-公式第一行就是质心最原始的定义，所有粒子的质量与位置乘积的总和除以总质量。
-公式第二个行，分子部分，第一项代表第一组粒子的质心与第一组粒子总质量的乘积，第二项代表第二组粒子的质心与第二组粒子总质量的乘积，而分母可以理解为两个质心的总质量。
+公式第一行就是质心最原始的定义，所有粒子的质量与位置乘积的总和除以总质量。公式第二个行，分子部分，第一项代表第一组粒子的质心与第一组粒子总质量的乘积，第二项代表第二组粒子的质心与第二组粒子总质量的乘积，而分母可以理解为两个质心的总质量。
 
 That's the original definition. But this is equal to the sum of mi, ri, divided by the sum of m. This is the center of mass of the first group of particles. Multiply this by the sum of m. When you do it, plus the sum of mj, sj, divided by the sum of mi, plus the sum of mi, divided by the sum of m, plus the sum of mi.(这是最初的定义。但这等于mi和ri的总和除以m的总和。这是第一组粒子的质心。将其乘以m的总和。当你这样做时，再加上mj和sj的总和除以mi的总和，再加上mi的总和除以m的总和，再加上mi的总和。)
 
 To do algebraic logarithm, because this cancel. But what is this? This is total mass at one point times the center of mass of the first group. This is the total mass of the second group times the center of mass of the second group. Multiply these two to get the total mass. This is what we learned later. So QED.(要做代数对数，因为这样可以消去。但这是什么？这是某一点的总质量乘以第一组的质心。这是第二组的总质量乘以第二组的质心。将这两者相乘得到总质量。这是我们后来学到的。因此，证毕。)
 
-Everybody happy? Okay. Now we are going to discuss Newton's equation. Newton's equation was applied to many particles. Similar angle particles. So mi, ri, double dot. So there is a total external force on the i-th particle. We write that as this. If there are five forces acting on point i, we make the vector sum of these five forces and write that as uf.加上, internal forces.(都明白吗？好的。现在我们要讨论牛顿方程。牛顿方程被应用于许多粒子。与单粒子相似。所以mi，ri，双点。所以第i个粒子受到的总外力。我们这样表示。如果有五个力作用在点i上，我们将这五个力的矢量相加，并表示为uf 内力。)
+### 牛顿方程
+
+Everybody happy? Okay. Now we are going to discuss Newton's equation. Newton's equation was applied to many particles. Similar angle particles. So mi, ri, double dot. So there is a total external force on the i-th particle. We write that as this. If there are five forces acting on point i, we make the vector sum of these five forces and write that as uf.加上, internal forces.(都明白吗？好的。现在我们要讨论牛顿方程。牛顿方程被应用于许多粒子。与单粒子相似。所以mi，ri，双点。所以第i个粒子受到的总外力。我们这样表示。如果有五个力作用在点 i 上，我们将这五个力的矢量相加，并表示为 f 内力。)
 
 $$M_{i}\ddot{\vec{r}} = \vec{F_{i}} + \sum_{j \neq i} \vec{f}_{i \leftarrow j}$$
 其中 $\vec{F}_{i}$ 是第 $i$ 粒子受到的总外力，第二项是内部粒子 $j$ 对第 $i$ 个粒子施加的内力。
@@ -96,10 +108,12 @@ $$\sum_{i} M_{i}\ddot{\vec{r}} = \sum_{i}\vec{F_{i}} + \sum_{i}\sum_{j \neq i} \
 因为根据牛顿第三定律有：$$\vec{f}_{i \leftarrow j}=-\vec{f}_{j \leftarrow i}$$
 So therefore, this term is zero. So we have a grand theorem. Summation m, i, r, i, double dot is equal to sum of... There is a total external force. So if we have a group of particles, if you take the total force on it, you get this very simple equation. It is a trivial statement, actually. （因此，这一项为零。于是我们得到了一个重要的定理：Σmᵢr̈ᵢ等于......这就是总外力。也就是说，如果我们有一组粒子，对其施加总外力，就能得到这个非常简单的方程。实际上，这是个不言自明的结论。）
 
-$$\text{线动量} = M_{i} \dot{\vec{r}_{i}}=\vec{P}_{i}$$
-Now, m, i, r, i, definition. m, i, r, i, dot. Mass times velocity is called momentum. The book always calls it linear momentum.Actually, in usual practice, when just a course is momentum, the book calls it linear momentum because later on we are going to study angular momentum. But first, let's stick to linear momentum. In any case, in usual physics language, momentum is equal to linear momentum.(现在来看mᵢrᵢ的定义。mᵢṙᵢ——质量乘以速度被称为动量。教科书上总是称之为线动量。实际上，在常规实践中，当仅涉及运动方向时，书中称之为线动量，因为后续我们将学习角动量。但首先，让我们专注于线动量。无论如何，在常规物理术语中，动量即指线动量。)
+### 线动量
 
-The concept that there is a linear momentum was due to Galileo. And it was Galileo who realized that if a particle does not suffer any external forces, its momentum, its linear momentum, its momentum remains constant. The reason that that was such a difficult thing to realize is because there is usually friction.(线性动量的概念是由伽利略提出的。正是伽利略意识到，如果一个粒子不受任何外力作用，它的动量，即线性动量，将保持不变。之所以这一发现如此困难，是因为通常存在摩擦力。)
+$$\text{线动量} = M_{i} \dot{\vec{r}_{i}}=\vec{P}_{i}$$
+Now, m, i, r, i, definition. m, i, r, i, dot. Mass times velocity is called momentum. The book always calls it linear momentum.Actually, in usual practice, when just a course is momentum, the book calls it linear momentum because later on we are going to study angular momentum. But first, let's stick to linear momentum. In any case, in usual physics language, momentum is equal to linear momentum.(现在来看$m_i \dot{r}_i$ 的定义。mᵢṙᵢ——质量乘以速度被称为动量。教科书上总是称之为线动量。实际上，在常规实践中，当仅涉及运动方向时，书中称之为线动量，因为后续我们将学习角动量。但首先，让我们专注于线动量。无论如何，在常规物理术语中，动量即指线动量。)
+
+The concept that there is a linear momentum was due to Galileo. And it was Galileo who realized that if a particle does not suffer any external forces, its momentum, its linear momentum, its momentum remains constant. The reason that that was such a difficult thing to realize is because there is usually friction.(线动量的概念是由伽利略提出的。正是伽利略意识到，如果一个粒子不受任何外力作用，它的动量，即线动量，将保持不变。之所以这一发现如此困难，是因为通常存在摩擦力。)
 
 And so it was thought that if something is not acted on, it would still slow down. Galileo recognized that that is due to some external thing. So if you have a very heavy body, if the influence of friction on it is very little, then its momentum is constant if it's not acted on by another force.(因此，人们曾认为，如果一个物体不受外力作用，它仍然会减速。伽利略意识到，这是由于某些外部因素造成的。所以，如果你有一个非常重的物体，如果摩擦力对它的影响非常小，那么在没有其他力作用的情况下，它的动量是恒定的。)
 
@@ -107,13 +121,15 @@ So this is called momentum, and it's usually called P-I. And the determinant is 
 
 If a system is isolated, is not acted on by, it has all kinds of internal forces, but not acted on by any external force, then, according to what we just said, its momentum's derivative is zero, so its momentum is conserved. So the conservation of momentum is the most important theorem in physics. Any questions? The mathematics seems to be extremely simple, but when you apply it to cases, it has very deep consequences.(如果一个系统是孤立的，不受外力作用，虽然内部存在各种力，但不受任何外力影响，那么根据我们刚才所说的，其动量的导数为零，因此*动量守恒*。所以动量守恒是物理学中最重要的定理。有什么问题吗？数学看起来极其简单，但当你将其应用到具体案例时，会产生非常深远的影响。)
 
+### 火箭运动
+
 So in particular, let us now discuss what is discussed in the book. It's called the rocket movement. When a rocket moves, it keeps on throwing particles backwards. Because of momentum conservation, if a rocket with fuel is moving, if it throws some of its fuel backwards, it will be accelerated, and that's what we are going to discuss. And the only physics principle involved is conservation of momentum.(因此，具体来说，我们现在要讨论书中提到的内容。这被称为火箭运动。当火箭移动时，它会不断向后喷射粒子。由于动量守恒，如果一枚携带燃料的火箭在移动时向后喷射部分燃料，它就会获得加速度，这就是我们要讨论的内容。其中涉及的唯一物理原理就是动量守恒。)
 
 With a mass of m, with a velocity of v, it keeps on throwing material backwards. So, later on, after a dt interval of time, it has a mass which we shall call m plus dm. dm is a negative quantity.（质量为M，速度为v，它不断向后抛射物质。因此，经过 dt 时间间隔后，其质量变为 M 加上dm（dm为负值）。）
 
 It has thrown away some mass, and it has, there is a minus dm here. After a small time, the rocket becomes lighter. It becomes m plus dm, where dm is negative.And that minus dm is still moving, but it's not moving with the same velocity as the big rocket. Let this velocity be v plus dv, and let's write this velocity as u. So, originally, it's this system. Finally, it's this system.What is the initial momentum? It's mv. （它抛掉了一些质量，这里有一个负的dm。经过一小段时间后，火箭变轻了。它变成了m加上dm，其中dm是负值。而那个负的dm仍在运动，但它的速度与大火箭不同。设这个速度为v加上dv，我们把这个速度记为u。所以，最初是这个系统。最终，是这个系统。初始动量是多少？是mv。）
 
-初始火箭总质量为 $M$，运行速度为 $v$，经过时间 $\mathrm{d}t$ 后，火箭喷射出的质量为 $-\mathrm{d}m$，这部分东西的速度为 $u$，而火箭的质量变为 $M+\mathrm{d}m$，速度为 $v+\mathrm{d}v$。所以初始的动量为 $Mv$；最终的动量是 ... 即：
+初始火箭总质量为 $M$，运行速度为 $v$，经过时间 $\mathrm{d}t$ 后，火箭喷射出的质量为 $-\mathrm{d}m$，这部分东西的速度为 $U$，而火箭的质量变为 $M+\mathrm{d}m$，速度为 $v+\mathrm{d}v$。所以初始的动量为 $Mv$；最终的动量是 ... 即：
 
 $$Mv = (-\mathrm{d}M)U+(v+\mathrm{d}v)(M+\mathrm{d}M)$$
 
@@ -121,7 +137,7 @@ $$Mv = (-\mathrm{d}M)U+(v+\mathrm{d}v)(M+\mathrm{d}M)$$
 $$\begin{align} 
 Mv &= -(\mathrm{d}M)(v+\mathrm{d}v-v_{\text{rel}})+Mv+M\mathrm{d}v+v\mathrm{d}M+\mathrm{d}M\mathrm{d}v
 \end{align} $$
-消掉两侧的 $Mv$，以及忽略 $\mathrm{d}M\mathrm{d}v$，$$v_{\text{rel}}\mathrm{d}M+M\mathrm{d}v=0$$
+即，$$v_{\text{rel}}\mathrm{d}M+M\mathrm{d}v=0$$
 What is the final momentum? Conservation. There are no additional forces.We are thinking of the rocket already out of the atmosphere, so there is no more resistance. And let us forget about the gravity for the time being. So, the total momentum of the rocket is this, and that should be equal to the total momentum here.So, it's equal to minus dm times v plus v plus dv times m plus dm. That's the conservation of momentum. Okay, let's calculate.（最终动量是多少？守恒。没有额外的力。我们考虑的是火箭已经离开大气层，因此不再有阻力。暂时先不考虑重力。因此，火箭的总动量是这个，应该等于这里的总动量。所以，它等于负dm乘以v加上v加dv乘以m加dm。这就是动量守恒。好的，我们来计算一下。）
 
 This is equal to minus vdm plus mv plus mdv plus vdm plus dvdm. So, this becomes the four terms. Now, this mv term cancels this mv term.This vdm cancels this vdm. Pardon? Just a second. Something is wrong.Sorry. This is u, sorry. This is not v, this is u. Now, what is u? u is equal to the velocity of the rocket minus a relative velocity.The rocket throws the fuel backwards with a certain velocity, and that velocity is... So, this becomes minus dm times v plus dv minus v relative plus vm plus mdv plus vdm plus dvdm. （这等于负vdm加mv加mdv加vdm加dvdm。所以，这就变成了四项。现在，这个mv项抵消了这个mv项。这个vdm抵消了这个vdm。什么？等一下。有点问题。抱歉。这是u，对不起。这不是v，这是u。那么，u是什么？u等于火箭的速度减去一个相对速度。火箭以一定的速度向后喷射燃料，那个速度是...所以，这就变成了负dm乘以v加dv减v相对加vm加mdv加vdm加dvdm。）
@@ -141,12 +157,12 @@ And you can see that this is larger than $1.1. So, the bank says, OK, now we ar
 
 This is a very important quantity. But anyway, if you have not learned this, then you will be learning it in mathematics very soon.And with that as the base, you get this formula. So, this becomes V times log of M final initial. This is equal to minus V relative.It's log of M final divided by M initial. M final is, of course, smaller than M initial. So, this minus sign becomes log of M initial divided by M final.V final minus V initial is equal. It says that the increase of the velocity is equal to the velocity of slowing back V relative times the logarithm of the initial mass divided by the final mass. （这是一个非常重要的量。不过，如果你还没学过这个，很快你就会在数学课上学到。有了这个基础，你就能得到这个公式。所以，这变成了V乘以M终除以M初的对数。这等于负的相对速度V。它是M终除以M初的对数。当然，M终比M初小。所以，这个负号就变成了M初除以M终的对数。V终减去V初等于。它表示速度的增加等于排出气体的相对速度V乘以初始质量除以最终质量的对数。）
 
-$$(v_{f}-v_{i})=-v_{\text{rel}}(\ln M_{f} - \ln M_{i})=r_{\text{rel}}\ln\left( \frac{M_{i}}{M_{f}} \right)$$
-这个公式叫齐奥尔科夫斯基公式。
+$$(v_{f}-v_{i})=-v_{\text{rel}}(\ln M_{f} - \ln M_{i})=v_{\text{rel}}\ln\left( \frac{M_{i}}{M_{f}} \right)$$
+这个公式叫齐奥尔科夫斯基公式。左侧是末速度与初始速度的差值，我们当然希望这个差值越大越好。而要想火箭速度足够的快，右侧这两项的乘积就必须都要大。然而 $\ln$ 项的增长速度非常缓慢，这意味这初始火箭总质量与最终剩下的质量比即便非常非常大，这一项的收益也很小，所以这必须要提供相对速度 $v_{\text{rel}}$。
 
 This is the most important formula for all the people who do rocketeering. Now, you first see the logarithm is a very small... is a very slowly varying thing. You know that the log of... the log to the base of 10. That's what we are more familiar.Log of 10 to the base of 10 is 1. Log of 100 to the base of 10 is only 2. Log of 1,000 to the base of 10 is only 3. So, the quantity may... M may increase very fast, but its log increases very slowly. （这是所有从事火箭工程的人最重要的公式。现在，你首先看到对数是一个非常小的...变化非常缓慢的量。你知道以10为底的对数...这是我们更熟悉的。以10为底的10的对数是1。以10为底的100的对数仅为2。以10为底的1000的对数仅为3。所以，这个量M可能...M可能增长得非常快，但它的对数增长得非常缓慢。）
 
-That's why the rocket... you have tons and tons of original rocket, and yet you have only a very small payload. Because if you want the V to be large, this V final to be large, you want this ratio to be very large.And yet this ratio, even if you make a very large one, the logarithm of it is not very large. So, what you need to do is first you need to increase V relative. Now, how is V relative done? V relative consists of... you have tubes.You see those rockets with tubes. The tubes has material inside which you heat up. （这就是为什么火箭……你需要大量的原始火箭燃料，却只能携带非常小的有效载荷。因为如果你想让最终速度V很大，你就需要这个比例非常大。然而，即使你把这个比例做得很大，它的对数也不会很大。所以，你需要做的首先是提高相对速度V。那么，如何实现相对速度V呢？相对速度V由……你看到的那些带管子的火箭组成。管子里面有材料，你把它加热。）
+That's why the rocket... you have tons and tons of original rocket, and yet you have only a very small payload. Because if you want the V to be large, this V final to be large, you want this ratio to be very large.And yet this ratio, even if you make a very large one, the logarithm of it is not very large. So, what you need to do is first you need to increase V relative. Now, how is V relative done? V relative consists of... you have tubes.You see those rockets with tubes. The tubes has material inside which you heat up. （这就是为什么火箭……你需要大量的原始火箭燃料，却只能携带非常小的有效载荷。因为如果你想让最终速度V很大，你就需要这个比例非常大。然而，即使你把这个比例做得很大，它的对数也不会很大。所以，你*需要做的首先是提高相对速度 V*。那么，如何实现相对速度V呢？相对速度V由……你看到的那些带管子的火箭组成。管子里面有材料，你把它加热。）
 
 And because it's very hot, it shows a jet.And so, therefore, you usually have four jets. And therefore, it pushes the... according to what we just said, it pushes it up with an increase, which is proportional to V relative. Therefore, the key point is you want to have as high a V relative as possible.Now, what is the V relative? You heat it up to a very high temperature. So you want a material inside of it which at a given temperature, you want it to be as fast as possible. （由于温度极高，会形成喷射流。因此通常会产生四股喷射流。根据我们刚才所述，喷射流会以与相对速度V成正比的比例推动物体上升。所以关键在于要尽可能提高相对速度V。那么什么是相对速度V呢？就是将材料加热到极高温度。因此需要选用在特定温度下能达到最快喷射速度的内部材料。）
 
@@ -161,13 +177,20 @@ So that means that if you have a very small payload, then you can't have a hig
 
 You have a final payload, M-I. If in the middle, it does not discard part of the machinery, then the final mass cannot be very small.These rockets are huge. It has fuel, which you try to put in as much as possible. Nonetheless, the rocket machine has a heavy weight.You don't want that to be in the final mass. Because you want this final mass to be as small as possible. That's the reason why you discard it.You first get it up, and then you throw away the heavy weight. The rocket has two parts. One has a heavy machinery, one has a light machinery.You throw away the heavy machinery. If you can throw it away several times, that's better. So that in the end, you only have the absolute minimum necessary payload, and no longer load it down with any machinery.That's why it's multiple stages. Okay, any questions?（你有一个最终的有效载荷，如果在中间阶段不抛弃部分机械结构，那么最终质量就无法降到很低。这些火箭体积庞大，装载了大量燃料，你总是尽可能多地加注燃料。然而，火箭机械结构本身重量很大，你肯定不希望这部分重量计入最终质量，因为你要让最终质量尽可能小——这就是抛弃机械结构的原因。你先把它送上去，然后扔掉沉重的部分。火箭由两部分组成：一部分是重型机械结构，另一部分是轻型机械结构。你要抛弃的正是重型机械结构。如果你能多次抛弃它，那就更好了。这样到最后，你只保留绝对必要的最小有效载荷，不再让任何机械装置拖累它。这就是为什么需要多级火箭。好了，有什么问题吗？）
 
+
+### 9.8 内部机制产生的外力
+
  Section 9-8, External force due to internal mechanisms. Let us look at the car.If here is a road, and we have a car going here, the car has some complicated internal mechanism. It burns gasoline, and it transmits that force, that energy, into the wheels or into the axle, and then the wheels turn. So now let's look at this car as a system.（第 9-8 节，内部机制产生的外力。让我们以汽车为例。假设这里有一条路，有一辆汽车正在行驶，汽车内部有复杂的机械结构。它燃烧汽油，并将这种力和能量传递到车轮或车轴上，然后车轮转动。现在让我们把这个汽车看作一个系统。）
 
 What are the forces on the car? Well, first there's gravitation. But the road has a reaction, so that usually balances. It has to balance, otherwise the car would go up and down.So let us assume it's going on a smooth surface, so there's no force up or down. So the energy is exactly balanced by the normal reaction. But its wheel is turning, so it's going this way, so its wheel is turning this way, and therefore the wheel pushes the ground backwards.（汽车受到哪些力？首先有重力。但路会产生反作用力，通常与之平衡。必须平衡，否则汽车会上下颠簸。假设它在光滑表面行驶，没有上下方向的力。因此，能量被法向反作用力精确平衡。但它的轮子在转动，这样前进，轮子这样转动，因此轮子向后推地面。）
 
 So the ground pushes, according to Newton's third law, the ground pushes the wheels forward. So if we look at the force not exerted by the car, but the force on the car, then in the front wheel there's this force, in the back wheel there's this force. So there are the following forces.Gravity, which is balanced by the normal reaction, and then beyond that, there are only the forces on the four wheels. So the total external force is equal to the sum of these four forces on the four wheels. And that's what accelerates the car.So you see, in this case, the source of the force is external, is internal. （根据牛顿第三定律，地面会推动车轮前进。如果我们不看汽车施加的力，而是看汽车所受的力，那么前轮会受到这个力，后轮也会受到这个力。因此，汽车受到以下几种力：重力（被地面的反作用力平衡），除此之外就只有四个车轮上的力了。所以，汽车受到的总外力等于四个车轮上这些力的总和。正是这些力让汽车加速。你看，在这种情况下，力的来源既是外部的，也是内部的。）
 
-That source causes an external force. But if we calculate Newton's law, we don't ask what's going on inside.We need only ask the total external force. So if you know the external force on the four wheels, you know the acceleration of the car. Is that clear? Okay, let's do an exercise, an example.10E. 10E says there's a skating rink with two people. Skating rink means there's no friction.And the two people, one is heavier, weighs 40 kilograms. The other is 65 kilograms. And they hold a bar.Remember, there's no friction on the two persons. So, and they are, both of them are pulling on the rope. （那个源头产生了一个外力。但如果我们计算牛顿定律，我们不需要问内部发生了什么。我们只需要知道总的外力。所以如果你知道四个轮子上的外力，你就知道汽车的加速度。清楚了吗？好，我们来做一道练习题，一个例子。10E。10E 说有一个溜冰场，里面有两个人。溜冰场意味着没有摩擦力。这两个人，一个比较重，重40公斤。另一个是65公斤。他们握着一根杆子。记住，这两个人没有摩擦力。所以，他们都在拉绳子。）
+That source causes an external force. But if we calculate Newton's law, we don't ask what's going on inside.We need only ask the total external force. So if you know the external force on the four wheels, you know the acceleration of the car. Is that clear? Okay, let's do an exercise, an example.10E. 10E says there's a skating rink with two people. Skating rink means there's no friction.And the two people, one is heavier, weighs 40 kilograms. The other is 65 kilograms. And they hold a bar.Remember, there's no friction on the two persons. So, and they are, both of them are pulling on the rope. （那个源头产生了一个外力。但如果我们计算牛顿定律，我们不需要问内部发生了什么。我们只需要知道总的外力。所以如果你知道四个轮子上的外力，你就知道汽车的加速度。清楚了吗？
+
+### 例题
+
+好，我们来做一道练习题，一个例子。10E。10E 说有一个溜冰场，里面有两个人。溜冰场意味着没有摩擦力。这两个人，一个比较重，重40公斤。另一个是65公斤。他们握着一根杆子。记住，这两个人没有摩擦力。所以，他们都在拉绳子。）
 
 So they will be approaching each other.This man is pulled this way by a force T, and this man is pulled by the same force, but going the other way. So we have M1 R1 double dot is equal to T. And it's equal to M2 R2 double dot. The R1 is this way.R2 is this way. So you can integrate this. So you get M1 R1 dot is equal to M2 R2 dot plus a constant.But the constant, we assume that the two people at T equal to zero are both not moving. So in that case, at that time, this is zero, this is zero, so this is zero. （所以他们将会相互靠近。这个人被一个力T朝这个方向拉，而这个人也被同样的力拉，但方向相反。所以我们有M1 R1的双点等于T。它也等于M2 R2的双点。R1是这个方向。R2是这个方向。所以你可以对此进行积分。所以你得到M1 R1的点等于M2 R2的点加上一个常数。但这个常数，我们假设在T等于零时，两个人都不动。所以在那种情况下，那时，这是零，这是零，所以这是零。）
 
